자바 파일업로드 Ajax

--- a/Java/FileUpload/1.파일업로드방식/3.Ajax를 이용하는 파일 업로드.md
+++ b/Java/FileUpload/1.파일업로드방식/3.Ajax를 이용하는 파일 업로드.md
@@ -1,1 +1,87 @@
-### 
+## Ajax를 이용한 파일 업로드
+
+<br>
+
+### 기본 개념
+---
+- Ajax를 이용하여 파일 데이터만을 전송하는 경우 FormData라는 객체를 이용한다.  
+- IE의 경우 10이후의 버전부터 지원됨
+
+### JSP
+```java
+<input type = 'file' name = 'uploadFile' Multiple>
+<button id='uploadBtn'>Upload</button>
+
+// jquery cdn
+<script src="jquery-3.3.1.min.js"></script>
+<script>
+    $(document).ready(function(){
+        $("#uploadBtn").on("click", function(e){
+            var formData = new FormData();
+            var inputFile = $("input[name='uploadFile']");
+            var files = inputFile[0].files;
+         });
+    });
+<script>
+```
+
+- Ajax를 이용하는 파일 업로드는 FormData를 이용해서 필요한 파라미터를 담아서 전송하는 방식
+
+<br>
+
+### jQuery를 이용한 첨부파일 전송
+---
+```java
+//jsp 일부
+
+// formData 객체에 filedata를 추가한다.
+for(var i = 0; i < files.length; i++){
+    formData.append("uploadFile", files[i]);
+}
+
+$.ajax ({
+    url:'/uploadAjaxAction',
+    processData: false,
+    contentType: false,
+    data: formData,
+    type: 'POST',
+    success: function(result){
+        alert("Uploaded");
+    }
+})
+``` 
+- processData와 contentType은 반드시 'false'로 지정한다.
+
+<br>
+
+Uploadcontroller
+```java
+@PostMapping("/uploadAjaxAction")
+public void uploadAjaxPost(MultipartFile[] uploadFile) {
+    String uploadFolder = "C:\\upload";
+    for (MultipartFile multipartFile : uploadFile) {
+        String uploadFileName = multipartFile.getOriginalFileName();
+
+        //IE file path
+        uploadFileName = uploadFileName.substring(uploadFileName.lastIndexOf("\\") + 1);
+
+        File saveFile = new File(uploadFolder, uploadFileName);
+
+        try {
+            multipartFile.transferTo(saveFile);
+        } catch (Exception e) {
+            log.error(e.getMessage());
+        }
+    }
+}
+```
+- IE의 경우 전체 파일 경로가 전송되므로, 마지막 ' \\ ' 를 기준으로 잘라낸 문자열이 실제 파일 이름이 된다.
+
+<br>
+
+### 파일 업로드 시 고려해야 하는 사항들
+---
+- 동일한 이름으로 파일이 업로드 되었을 때 기존 파일이 사라지는 문제
+- 이미지 파일의 경우에는 원본 파일의 용량이 큰 경우 섬네일 이미지를 생성해야 하는 문제
+- 이미지 파일과 일반 파일을 구분해서 다운로드 혹은 페이지에서 조회하도록 처리하는 문제
+- 첨부파일 공격에 대비하기 위해 업로드 파일의 확장자 제한
