Linux 기본 명령어 수정

--- a/Linux/2.리눅스 기본 명령어/2.디렉터리 및 파일.md
+++ b/Linux/2.리눅스 기본 명령어/2.디렉터리 및 파일.md
@@ -1,9 +1,15 @@
 ### 디렉터리 관리 명령어
 ---
 1. pwd
+    - 현재 작업 중인 디렉터리 위치를 나타내는 명령어
 2. cd
+    - change directory 약자로 디렉터리를 이동할 때 사용하는 명령어
 3. mkdir
+    - make directory의 약자로 새로운 디렉터리를 생성할 때 사용하는 명령어
 4. rmdir
+    - remove directory의 약자로 디렉터리만 삭제하는 명령어
+    - 안에 파일이 존재할 경우 삭제되지 않는다.
+        - rm -r 명령어를 이용하여 삭제한다.
 
 <br>
 <br>
@@ -11,13 +17,75 @@
 ### 파일 관련 명령어
 ---
 1. ls
+    - 현재 위치한 디렉터리의 파일 목록들을 나태내는 명령어
+
+|옵션|설명|
+|---|---|
+|-a|히든 파일을 포함한 모든 파일과 디렉터리 표시|
+|-l|퍼미션, 크기, 사이즈 등의 자세한 정보 표시|
+|-d|지정된 디렉터리의 정보 출력|
+|-r|알파벳 역순으로 정보 출력|
+|-R|하위 경로와 그 안에 있는 파일 표시|
+
+<br>
+
 2. cp
+    - 파일 또는 디렉터리를 복사하는 명령어
+
+|옵션|설명|
+|---|---|
+|-b|복사 대상 파일이 이미 존재할 경우를 대비하여 백업 파일을 만듬|
+|-f|복사 대상이 이미 존재하면 복사 대상 파일을 강제로 지우고 복사|
+|-i|복사 대상이 이미 존재하면 사용자에게 덮어씌울 것인지 유무 확인|
+|-r|디렉터리를 복사할 경우 하위 디렉터리와 파일을 모두 복사|
+
+<br>
+
 3. rm
+    - 파일 또는 디렉터리를 삭제하는 명령어
+
+|옵션|설명|
+|---|---|
+|-f|질의 메시지 없이 강제로 파일이나 디렉터리 삭제|
+|-i|삭제 시 사용자에게 질의|
+|-r|삭제 디렉터리가 포함하고 있는 하위 디렉터리를 포함하여 모든 파일 삭제|
+
+<br>
+
 4. mv
+    - 파일 또는 디렉터리를 이동하거나 파일명을 변경할 때 사용하는 명령어
 5. touch
+    - 파일 크기 0 바이트인 빈 파일을 생성한다.
 6. file
+    - 파일의 종류 및 파일 속성값을 나타내는 명령어
 7. find
+    - 현재 디렉터리에서부터 하위 디렉터리까지 주어진 조건의 파일을 찾아 해당 경로를 표시
+```
+find[경로][옵션][정규표현식][파일명]
+```
+|옵션|설명|
+|---|---|
+|-name|이름을 기준으로 파일 검색|
+|-user|user의 파일이나 디렉터리 검색|
+|-perm|지정된 권한의 파일 검색|
+|-type|파일 유형에 따라 파일 검색|
+|-atime n|n일 이전에 접근한 파일 검색|
+|-exec|검색된 파일에 수행할 명령어를 지정|
+
+<br>
+
+|옵션 예시|설명|
+|---|---|
+|find /etc -name "*.conf"|/etc에 확장자 conf 파일 검색|
+|find ~ -perm 644|허가권이 644인 파일 검색|
+|find /bin -size +10k -size -100k|- +를 붙이는 경우에는 크기가 10kbyte 이상인 것을 찾고 -100kbyte 이하를 찾는다. <br> - +, - 를 붙이지 않는 경우에는 지정된 크기의 파일을 찾는다.|
+|find ~ -size 0k -exec ls -l{ }\ |사용자 홈 디렉터리 하위에 파일 크기가 0인 파일 목록을 상세히 출력|
+|find /home -name "*.swp" -exec rm { }\ |/home 홈 디렉터리 하위에 확장자 swp 파일 삭제|
+
+<br>
+
 8. locate
+    - 파일의 위치를 찾는 명령어
 
 <br>
 <br>
@@ -25,24 +93,92 @@
 ### 텍스트 파일 관련 명령어
 ---
 1. cat
+    - 파일의 내용을 출력하는 명령어
 2. head
+    - 파일의 앞부분을 지정한 만큼 출력하는 명령어
 3. tail
-4. more
-5. less
-6. grep
-7. wc
-8. sort
-9. cut
-10. split
+    - 파일의 마지막 행을 기준으로 지정한 행까지의 파일 내용 일부를 출력하는 명령어
+```
+tail [옵션] 파일명
+```
+|옵션|설명|
+|---|---|
+|-c|출력을 원하는 용량 지정|
+|-숫자 또는 -n 숫자|- 출력을 원하는 줄 수 지정 <br> - 욥션이나 숫자를 지정하지 않으면 기본적으로 10개씩 출력|
+|-f|지정된 파일에 새롭게 추가되는 파일 내용을 실시간으로 출력|
+|-v|파일을 출력할 때 파일명을 표시|
+|-q|파일을 출력할 때 파일명을 표시하지 않음|
 
+<br>
+
+4. more
+    - 파일을 확인하는 명령어로 파일을 화면 단위로 끊어서 출력하는 명령어
+5. less
+    - 텍스트 파일을 한 번에 한 화면씩 나타내는 명령어
+    - 기능적으로 more를 확장한 것, 커서를 파일의 상하좌우로 이동할 수 있다.
+6. grep
+    - 파일에서 특정한 패턴(문자열) 또는 정규 표현식으로 나타낸 단어를 찾는 명령어
+```
+grep [옵션] 문자열 파일명
+```
+|옵션|설명|
+|---|---|
+|-f|디렉터리 내의 모든 디렉터리와 파일들을 검색하도록 지정|
+|-E|패턴을 정규 표현식으로 확장|
+|-i|대문자, 소문자 차이 무시|
+|-v|검색할 문자열이 포함되지 않은 줄만 출력|
+|-n|라인수 출력|
+|-l|문자열이 포함된 파일명 출력|
+
+<br>
+
+7. wc
+    - 파일의 라인 수, 단어 수, 알파벳 수를 알려주는 명령어
+
+8. sort
+    - 명령어 결과나 문서 내용을 정렬하는 명령어
+```
+sort [옵션] 정렬한 파일명
+```
+|옵션|설명|
+|---|---|
+|-b|앞 공백 무시|
+|-o|저장할 파일 명시|
+|-r|역순으로 표시|
+|-f|대소문자 구분하지 않음|
+|-t|필드 구분자 지정|
+|-u|중복 행 제거|
+|-m|정렬 파일 병합|
+|-n|숫자만 비교|
+
+<br>
+
+9. cut
+    - 파일에서 특정 필드를 추출해 낸다. 필드는 구분자로 구분할 수 있다.
+10. split
+    - 하나의 파일을 여러 개의 작은 파일로 분리할 때 사용한다.
+    - 파일의 내용을 라인 수로 분할할 수도 있고, 용량 단위로 분할할 수도 있다.
 <br>
 <br>
 
 ### 파일 비교 명령어
 ---
 1. diff
+    - 두 개의 파일을 행 단위로 비교하여 다른 부분을 출력하는 명령어
+    - 두 개의 파일을 매개변수로 사용하여 화면에 차이점을 나열한다.
+```
+diff [옵션] 파일명1 파일명2 또는 diff [옵션] 디렉터리1 디렉터리2
+```
 2. cmp
+    - 두 개의 파일을 바이트(문자) 단위로 비교하여 출력하는 명령어
+```
+cmp [옵션] 파일명1 파일명2
+```
 3. comm
+    - 두 개의 파일을 줄 단위로 비교하여 출력하는 명령어
+```
+comm [옵션] 파일명1 파일명2
+```
 
 <br>
 <br>
