--- a/Java/IO 기반 입출력/5.보조 스트림/5.객체 입출력 보조 스트림.md
+++ b/Java/IO 기반 입출력/5.보조 스트림/5.객체 입출력 보조 스트림.md
@@ -1,3 +1,5 @@
+ ## 객체 입출력 보조 스트림
+ 
  - 자바는 메모리에 생성된 객체를 파일 또는 네트워크로 출력할 수 있다.
  - 객체를 출력하기 위해서는 객체의 데이터(필드값)을 일렬로 늘어션 연속적인 바이트로 변경해야 하는데, 이것을 객체 직렬화(serialization)라고 한다.
  - 반대로 파일에 저장되어 있거나 네트워크에서 전송된 객체를 읽을 수 있는데, 입력 스트림으로 부터 읽어들인 연속적인 바이트를 객체로 복원하는 것을 역직렬화(deserialization)라고 한다.
@@ -7,7 +9,7 @@
  ### ObjectInputStream, ObjectOutputStream
  ---
 
- <img src="../../image/objectstream.png">
+ <img src="../image/objectstream.png">
 
  <br>
 
