--- a/Linux/2.리눅스 운영 및 관리/3.프로세스 관리/1.개념 및 유형.md
+++ b/Linux/2.리눅스 운영 및 관리/3.프로세스 관리/1.개념 및 유형.md
@@ -26,3 +26,35 @@
         - 새로운 프로세스를 만들 때 기존 프로세스를 복제하는 방식을 사용한다.
         - 새로운 프로세스를 위한 메모리를 할당한다.
         - 새로 생성된 프로세스는 원래의 프로세스와 똑같은 코드를 가지고 있다.
+
+    2. exec() 함수
+        - 호출하는 프로세스가 새로운 프로세스로 변경되는 방식이다.
+        - 새로운 프로세스를 위한 메모리를 할당하지 않는다.
+        - 호출한 프로세스의 메로리에 새로운 프로세스의 코드를 덮어씌워 버린다.
+        - exec()을 호출한 프로세스가 아닌 exec()에 의해 호출된 프로세스만 메모리에 남게 된다.
+    
+    3. 데몬(Daemon)
+        - 리눅스 시스템이 부팅 시 자동으로 실행되는 백그라운드 프로세스
+        - 메모리에 상주하면서 사용자의 특정 요청이 오면 즉시 실행되는 대기 중인 서버 프로세스
+        - 주기적이고 지속적인 서비스 요청을 처리하기 위해 실행
+        - 사용자들이 이 프로세스들을 볼 수 있는 권한이 없다.
+        - 리눅스에서 데몬을 실행하는 방법에는 세 가지가 있다.
+
+
+|||
+|---|---|
+|standalone 데몬|- 서비스가 요청이 들어오기 전에 서비스가 메모리에 상주하는 단독 실행 방식|
+|inetd 데몬 (슈퍼 데몬)|- inetd는 다른 데몬들의 상위에 존재하는 standalone 데몬|
+|inetd 타입 데몬|- inetd 타입 데몬들은 직접 서비스를 가동하지 못하고 inetd 데몬이 활성화가 되어야만 해당 서비스 제공|
+
+- 4. 시그널 (Signal)
+        - 시그널은 프로세스에게 이벤트 발생을 전달해주는 소프트웨어 인터럽트 이다.
+        - 명령어 kill -l로 시그널 리스트를 확인할 수 있다.
+        - 시그널이 프로세스에게 전달될 때 4가지 상황이 발생한다.
+
+|||
+|---|---|
+|SIG_IGN(SIG_PF)1|운영체제에 의해 시그널이 무시된다.|
+|SIG_ERR(SIF_PF)-1|운영체제는 프로그램을 강제로 종료한다.|
+|SIG_DFL(SIG_PF)0|지정한 시그널 처리 루틴(routine)을 실행한다.|
+|SIG_HOLD(SIG_PF)2|시그널이 블로킹된다.|
