--- a/Linux/2.리눅스 운영 및 관리/3.프로세스 관리/2.프로세스 유틸리티.md
+++ b/Linux/2.리눅스 운영 및 관리/3.프로세스 관리/2.프로세스 유틸리티.md
@@ -15,3 +15,133 @@ ps [옵션]
 |x|접속된 터미널뿐만 아니라 사용되고 있는 모든 프로세스들을 출력|
 |l|자세한 정보 출력|
 
+-    - ps 와 grep을 이용하여 특정 프로세스의 상태 정보를 확인할 수 있다. 명령어 ps ax | grep httpd는 httpd 프로세스들의 상태를 나타낸다.
+    - ps aux 를 수행한 결과 (다시 정리하자.)
+    - 좀비 프로세스는 kill 시그널을 받아도 종료 되지 않는다.
+    - ps -l을 수행한 결과 (다시 정리)
+
+<br>
+
+2. pstree
+    - 실행중인 프로세스들을 트리 구조로 나타낸다.
+```
+pstree [옵션]
+```
+
+|옵션|설명|
+|---|---|
+|-p|프로세스 ID 표시|
+|-n|프로세스 ID를 정렬해서 표시|
+|-a|명령행 인자를 포함한 트리구조로 표시|
+|-h|현재 프로세스와 해당 프로세스의 부모 프로세스를 음영으로 강조해서 표시|
+
+
+<br>
+
+3. jobs
+    - 작업이 중지된 상태, 백그라운드로 진행 중인 상태, 변경되었지만 보고되지 않은 상태 등을 표시한다.
+```
+jobs[옵션][작업번호]
+```
+
+<br>
+
+4. bg와 fg
+    - 포그라운드에서 백그라운드로의 전환
+        - 명령어 bg는 현재 실행 중인 프로세스를 백그라운드 작업으로 전환한다.
+```
+bg %작업번호 또는 bg 작업번호
+```
+-   - 백그라운드에서 포그라운드로의 전환
+        - 명령어 fg는 현재 백그라운드로 실행 중인 명령어를 포그라운드로 전환한다.
+```
+fg %작업번호 또는 fg 작업번호
+```
+
+<br>
+
+5. kill
+    - 프로세스를 종료시킨다.
+```
+kill[옵션][시그널 번호 또는 시그널이름][PID 또는 %작업번호]
+```
+
+|옵션|설명|
+|---|---|
+|-l|시그널 종류 나열|
+|-s 시그널 번호 <br> -s 시그널 명|전달할 시그널의 종류를 지정|
+|-1|-HUP, 프로세스를 재시작|
+|-9|프로세스를 강제로 종료|
+
+<br>
+
+6. killall
+    - 같은 데몬의 여러 프로세서를 한 번에 종료시킬 때 사용한다.
+
+```
+killall[옵션][프로세스명]
+```
+(옵션 다시 정리)
+
+<br>
+
+7. nice
+    - 프로세스 사이의 우선순위를 확인하고 우선순위를 변경할 수 있는 명령어
+    - NI값을 조정하여 프로세스의 우선순위를 변경한다.
+    - NI 범위 -20(가장 높은 우선권) ~ 19 (가장 낮은 우선권)
+```
+nice[옵션]프로세스 명
+```
+(옵션 다시 정리)
+
+<br>
+
+8. renice
+    - 이미 실행 중인 프로세스의 우선순위를 변경한다.
+    - 프로세스 소유자와 루트 권한자만이 명령을 내릴 수 있다.
+```
+renice[옵션] NI값 PID
+```
+(옵션 다시 정리)
+
+<br>
+
+9. top
+    - 리눅스 시스템의 운영 상태를 실시간으로 모니터링하거나 프로세스 상태를 확인할 수 있다.
+```
+top[욥선][PID]
+```
+(옵션 다시 정리)
+
+<br>
+
+10. nohup
+    - 프로세스가 중간되지 않고 백그라운드로 작업을 수행할 수 있게 한다.
+    - 사용자가 로그아웃하거나 작업 중인 터미널 창이 닫혀도 실행 중인 프로세스를 백그라운드 프로세스로 계속 작업할 수 있도록 한다.
+
+<br>
+
+11. tail
+    - 파일의 마지막 행을 기준으로 지정한 행까지 파일 내용의 일부를 출력한다.
+    - 기본값으로 마지막 10줄을 출력
+```
+tail[옵션][파일명]
+```
+
+|옵션|설명|
+|---|---|
+|-f|파일의 10줄을 출력하고 파일의 내용을 실시간으로 출력|
+|-n N|N 개수만큼의 라인을 출력|
+
+<br>
+<br>
+
+### 스케줄링과 cron
+---
+1. 주기적으로 반복되는 일을 자동적으로 실행될 수 있도록 설정한다.
+2. 스케줄링 데몬(서비스)은 "crond"이며, 관련 파일은 "/etc/crontab"이다.
+
+```
+crontab[옵션]파일명
+```
+(옵션 다시 정리)
