Java/FileUpload/파일의 확장자나 크기의 사전 처리

--- a/Java/FileUpload/2.파일 업로드 상세 처리/1.파일의 확장자나 크기의 사전 처리.md
+++ b/Java/FileUpload/2.파일 업로드 상세 처리/1.파일의 확장자나 크기의 사전 처리.md
@@ -19,3 +19,13 @@ function checkExtension(fileName, fileSize) {
     return true;
 }
 ```
+
+<br><br>
+
+### 중복된 이름의 첨부파일 처리
+- 첨부파일 저장 시 처리되야 하는 사항들
+    - 중복된 이름의 파일 처리
+        - 현재 시간을 밀리세컨드까지 구분해서 파일 이름을 생성해 저장
+        - UUID를 이용해서 중복이 발생할 가능성이 거의 없는 문자열을 생성
+    - 한 폴더 내에 너무 많은 파일의 생성 문제
+        - 년/월/일 단위로 폴더를 생성한다.
