FileUpload/파일의 확장자나 크기의 사전 처리 수정

--- a/Java/FileUpload/2.파일 업로드 상세 처리/1.파일의 확장자나 크기의 사전 처리.md
+++ b/Java/FileUpload/2.파일 업로드 상세 처리/1.파일의 확장자나 크기의 사전 처리.md
@@ -29,3 +29,9 @@ function checkExtension(fileName, fileSize) {
         - UUID를 이용해서 중복이 발생할 가능성이 거의 없는 문자열을 생성
     - 한 폴더 내에 너무 많은 파일의 생성 문제
         - 년/월/일 단위로 폴더를 생성한다.
+
+### 년/월/일 폴더의 생성
+- 첨부파일을 보관하는 폴더를 생성하는 작업은 2가지이다.
+    - 한 번에 폴더를 생성하는 방식
+        - java.io.file에 존재하는 mkdirs()를 이용하면 필요한 상위 폴더까지 한 번에 생성할 수 있어서 간단히 처리가 가능하다.
+    - 존재하는 폴더를 이용하는 방식
