리눅스 반복 연습 명령어

--- a/Linux/1.리눅스 일반/2.리눅스 기본 명령어/2.디렉터리 및 파일.md
+++ b/Linux/1.리눅스 일반/2.리눅스 기본 명령어/2.디렉터리 및 파일.md
@@ -225,7 +225,7 @@ comm [옵션] 파일명1 파일명2
 |[ ]|- 대체 글자 목록을 [ ]에 나열 <br> - " - "로 문자의 범위 지정|[abc]d|- ab, bd, cd를 뜻함 <br> - a, b, c 중 어떤 한 글자라도 반드시 있는 단어 <br> - "[a-z]" : a부터 z까지 중 하나의 문자 <br> - "[1-9]" : 1부터 9까지 중 하나의 숫자|
 |[^]|- 대체 못할 글자 목록을 [^]에 나열 <br> - " - " 로 문자의 범위 지정|[^abc]d|- ab, bd, cd는 포함하지 않고 ed, fd등을 포함 <br> - [^a-z] : 알파멧 소문자로 시작하지 않는 모든 문자|
 |+|+ 기호 바로 이전 글자나 정규 표현식이 1회 이상 반복|abc+|c가 1회 이상 반복 <br> ex) abc, abcc, abccc 등|
-|?|? 기호 바로 이전 글자나 정규 표현식이 없거니 1회만 존재|abc?|c가 없거나 한 번만 존재 <br> ab, abc|
+|?|? 기호 **바로** 이전 글자나 정규 표현식이 없거니 1회만 존재|abc?|c가 없거나 한 번만 존재 <br> ab, abc|
 |( )|부분 정규 표현식의 시작과 끝을 표시|a(bc)* <br> a(bc)+ <br> a(bc)?|- bc가 0회 이상 반복 : a, abc, abcbc 등 <br> - bc가 1회 이상 반복 : abc, abcbc 등 <br> - bc가 있거나 없거나 : a, abc|
 |\||\|로 구분된 단어들 중 최소 하나 존재|a(b\|c)|b 또는 c가 최소 하나 존재 <br> ex) ab, ac, abc, acb|
 |(m,n)|{ } 기호 바로 이전 글자나 정규 표현식이 m개 이상 n개 이하 반복|a{1,3}b|'ab', 'aab', 'aaab' 를 포함하지만, 'b'나 'aaaab' 는 포함하지 않음|
