Java/fileupload 업데이터

--- a/Java/FileUpload/3.브라우저에서 섬네일 처리/1.input file 타입의 초기화.md
+++ b/Java/FileUpload/3.브라우저에서 섬네일 처리/1.input file 타입의 초기화.md
@@ -3,6 +3,8 @@
     - 업로드 후에 업로드 부분을 초기화 시키는 작업
     - 결과 데이터를 이용해서 화면에 섬네일이나 파일 이미지를 보여주는 작업
 
+<br>
+
 ### \<input type='file'\>의 초기화
 - \<input type='file'\> 은 readonly 형식이다.
     - \<input type='file'\> 객체가 포함된 \<div\>를 복사(clone)한 후, 첨부파일을 업로드 한 뒤에 복사된 객체를 \<div\> 내에 다시 추가해서 첨부파일 부분을 초기화시킨다.
@@ -12,25 +14,15 @@ var cloneObj = $(".uploadDiv").clone();
 
 $.ajax({
     url : '/uploadAjax',
-    ...
-    ...
+    processData : false,
+    contentType : false,
+    data : formData,
+    type : 'POST',
+    dataType : 'json',
     success : function(result) {
         $(".uploadDiv").html(cloneObj.html());
     }
 })
 ```
 
-<br>
 
-### 업로드된 이미지 처리
-- 업로드된 결과는 JSON 형태로 받아왔으므로, 이를 이용해 적절한 섬네일을 보여주거나 화면에 파일 아이콘 등을 보여주어서 결과를 피드백해 줄 수 있다.
-1. 파일 이름 처리
-
-
-전제적인 과정을 적어보면 어떨까? 그리고 구현하기 위해 사용된 클래스를 같이 적어보면 생소한 과정들이 정리 될거 같다.
-
-예시) 파일을 다운로드 한다. (이걸 더 세분화 시킨다.)
-- 서버
-  - 서버 ~~
-- 화면
-  - 화면 ~~
