Java/FileUpload 수정 및 추가

--- a/Java/FileUpload/3.브라우저에서 섬네일 처리/2.업로드된 이미지 처리.md
+++ b/Java/FileUpload/3.브라우저에서 섬네일 처리/2.업로드된 이미지 처리.md
@@ -6,7 +6,7 @@
 
 
 
-전제적인 과정을 적어보면 어떨까? 그리고 구현하기 위해 사용된 클래스를 같이 적어보면 생소한 과정들이 정리 될거 같다.
+전제적인 과정을 적어보면 어떨까? 그리고 구현하기 위해 사용된 클래스(File, )를 같이 적어보면 생소한 과정들이 정리 될거 같다.
 
 예시) 파일을 다운로드 한다. (이걸 더 세분화 시킨다.)
 - 서버
