--- a/Java/FileUpload/3.브라우저에서 섬네일 처리/3.섬네일 이미지 보여주기.md
+++ b/Java/FileUpload/3.브라우저에서 섬네일 처리/3.섬네일 이미지 보여주기.md
@@ -12,3 +12,9 @@
 
 ### UploadController에서 데이터 전송하기
 - 특정 파일의 이름을 받아서 이미지 데이터를 전송하는 코드를 생성
+```java
+@GetMapping("/display")
+@ResponseBody
+public 
+
+```
