--- a/Java/FileUpload/1.파일업로드방식/2.form 방식의 파일 업로드.md
+++ b/Java/FileUpload/1.파일업로드방식/2.form 방식의 파일 업로드.md
@@ -7,7 +7,7 @@
 
 2. Spring
 
-    1. MultipartFile 타입을 제공해서 업로드되는 파일 데이터를 쉽게 처리한다.
+    1. MultipartFile 타입을 제공해서 업로드되는 파일 데이터를 쉽게 처리할 수 있다.
     2. &lt;input tpye='file' name='uploadFile'&gt;의 name 속성으로 변수를 지정해서 처리한다.
     3. MultipartFile 메서드  
 
@@ -25,11 +25,12 @@
 <br>
 
 파일 저장
-- 업로드 되는 파일 저장은 transferTo()를 이용하여 처리
+- 업로드 되는 파일 저장은 transferTo( )를 이용하여 처리
 ```java
 //UploadController
 @PostMapping("/uploadFormAction")
 public void uploadFormPost(MultipartFile[] uploadFile, Model model) {
+
 String uploadeFolder = "C:\\upload";
 
     for (MultipartFile multipartFile : uploadFile) {
@@ -51,3 +52,15 @@ String uploadeFolder = "C:\\upload";
 ```
 - transferTo()의 파라미터는 java.io.File의 객체를 지정하면 되기 때문에 업로드 되는 원래 파일의 이름으로 지정된 폴더에 원래 이름으로 저장된다.
 - 한글 깨짐 문제 발생
+
+
+- MultipartFile
+- File
+    - 형태
+        - 파라미터에 들어오는 형태는 folder의 경로, 파일의 이름이다.
+```java
+파일의 경로 = "C\\upload";
+파일의 이름 = multipartFile.getOriginalFileName();
+
+File file = new File(folder의 경로, 파일의 이름);
+```
