--- a/Java/FileUpload/1.파일업로드방식/3.Ajax를 이용하는 파일 업로드.md
+++ b/Java/FileUpload/1.파일업로드방식/3.Ajax를 이용하는 파일 업로드.md
@@ -1,5 +1,9 @@
 ## Ajax를 이용한 파일 업로드
 
+- 기본적인 controller와 js의 형태를 잘 알아두고 암기하자.
+- 특히 controller에서 사용된 File, MultipartFile을 사용할 때의 메서드와 파라미터의 사용을 기억하자
+- JS에서 사용된 방식도 암기하자 (formData.append)
+
 <br>
 
 ### 기본 개념
@@ -20,6 +24,7 @@
             var formData = new FormData();
             var inputFile = $("input[name='uploadFile']");
             var files = inputFile[0].files;
+            console.log(files);
          });
     });
 <script>
@@ -50,9 +55,12 @@ $.ajax ({
     }
 })
 ``` 
+- 첨부파일 데이터는 formData에 추가한 뒤에 Ajax를 통해서 formData 자체를 전송한다.
 - processData와 contentType은 반드시 'false'로 지정한다.
 
 <br>
+
+- controller에서는 form을 처리했을때와 동일하게 multipartFile 타입을 이용해서 첨부파일 데이터를 처리한다.
 
 Uploadcontroller
 ```java
@@ -85,3 +93,8 @@ public void uploadAjaxPost(MultipartFile[] uploadFile) {
 - 이미지 파일의 경우에는 원본 파일의 용량이 큰 경우 섬네일 이미지를 생성해야 하는 문제
 - 이미지 파일과 일반 파일을 구분해서 다운로드 혹은 페이지에서 조회하도록 처리하는 문제
 - 첨부파일 공격에 대비하기 위해 업로드 파일의 확장자 제한
+
+<br>
+<br>
+
+
