--- a/Java/FileUpload/2.파일 업로드 상세 처리/2,중복된 이름의 첨부파일 처리.md
+++ b/Java/FileUpload/2.파일 업로드 상세 처리/2,중복된 이름의 첨부파일 처리.md
@@ -1,4 +1,5 @@
 ### 중복된 이름의 첨부파일 처리
+- 중복된 이름을 처리해 주지 않는다면 이전의 파일이 삭제된다.
 - 첨부파일 저장 시 처리되야 하는 사항들
     - 중복된 이름의 파일 처리
         - 현재 시간을 밀리세컨드까지 구분해서 파일 이름을 생성해 저장
