Kakao Api update

--- a/API/1.kakaoDeveloper.md
+++ b/API/1.kakaoDeveloper.md
@@ -1,7 +1,18 @@
-### 다음 주소 이용하기
+## 다음 주소록 이용
 
 1. 기본적인 설정을 참고하자. ([Daum 우편번호 서비스 사용 가이드](http://postcode.map.daum.net/guide))
     - script 설정
 
-2. 지도 API 사용 ([Kakao Maps API Guide](https://apis.map.kakao.com/web/guide/))
+## 지도 API 이용
 
+- 지도 API 가이드 ([Kakao Maps API Guide](https://apis.map.kakao.com/web/guide/))
+
+
+<br>
+
+### 지도 띄우기
+-  [지도 생성](https://apis.map.kakao.com/web/sample/basicMap/)
+
+
+### 마커 생성
+- [마커 생성](https://apis.map.kakao.com/web/sample/basicMarker/)
