Java/Util update

--- a/Java/Utils/난수생성.md
+++ b/Java/Utils/난수생성.md
@@ -15,7 +15,11 @@ UUID temporaryPassword = UUID.toString();
 <br>
 
 2. 아스키 코드를 이용한 방법
-- 
+- 아스키코드는 65 ~ 90 까지는 영문대문자, 97 ~ 122 까지는 영문소문자.
+- 26가지의 랜덤으로 수 하나를 구하고 그 수에 65라는 수를 더한 후 
+```java
+
+```
 
 
 <br>
