--- a/Spring/JPA/5.연관관계 매핑 기초/단방향 연관관계.md
+++ b/Spring/JPA/5.연관관계 매핑 기초/단방향 연관관계.md
@@ -20,13 +20,14 @@ public class Team {
     private Long id;
     private String name;
 
-    @OneToMany   // Team의 객체는 Member를 읽기 참조만 가능하다.
-    private Member member;
+    // 단방향에서는 one 쪽에 설정을 해주지 않는다.
+    // @OneToMany   // Team의 객체는 Member를 읽기 참조만 가능하다.
+    // private Member member;
 }
 ```
 <br>
 
-- 객체 지향 모텔링
+- 객체 지향 모델링
 ```java
 // 팀 저장
 Team team = new Team();
@@ -70,3 +71,6 @@ em.persist(teamB);
 // member 객체에 teamB 객체를 set해주는거 만으로 member의 팀이 변경된다.
 member.setTeam(teamB);
 ```
+
+### 단방향 설정이란
+- 다대일의 관계에 있는 엔티티에만 연관관계 설정이 존재한다면 단방향이라고 정의한다.
