--- a/Spring/JPA/6.다양한 연관관계의 매핑/3.일대일.md
+++ b/Spring/JPA/6.다양한 연관관계의 매핑/3.일대일.md
@@ -35,7 +35,7 @@ public class Locker {
 ```java
 // Locker class
 ...
-
+// 양방향을 원하면 추가하면 된다.
 // 읽기 전용이 된다.
 @OnetoOne(mappedBy = "member")
 private Member member;
