--- a/Spring/JPA/5.연관관계 매핑 기초/양방향 연관관계.md
+++ b/Spring/JPA/5.연관관계 매핑 기초/양방향 연관관계.md
@@ -52,7 +52,7 @@ int memberSize = findTeam.getMembers().size();
     - 주인이 아니면 mappedBy 속성으로 주인 지정
 
 ### 누구를 주인으로?
-- 외래 키가 있는 곳을 주인으로 정한다.
+- 외래 키가 있는 곳을 주인으로 정한다. (외래키를 관리하는 엔티티)
 
 - 연관관계의 주인과 mappedBy
     - 양방향 연관관계에서 외래키를 업데이트하는 것은 Member의 객체인가, Team의 객체인가?
