--- a/DataBase/Oracle/기본 명령어.md
+++ b/DataBase/Oracle/기본 명령어.md
@@ -1,8 +1,15 @@
-### DDL
+## DDL
+
+### 테이블 조작
+
 - 테이블 명 변경
 ```sql
 ALTER TABLE 기존 테이블명 RENAME TO 변경할 테이블명;
 ```
+<br>
+
+### 컬럼 조작
+
 - 컬럼 명 변경
 ```sql
 ALTER TABLE 테이블 명 RENAME COLUMN 기존 컬럼명 TO 변경할 컬럼명;
@@ -19,9 +26,78 @@ ALTER TABLE 테이블 명 DROP(컬럼명);
 - 컬럼 추가
 ```SQL
 ALTER TABLE 테이블 명 ADD(컬럼명 속성);
-ex) ALTER TABLE BOARD ADD(createat date deault sysdate);
+ex) ALTER TABLE BOARD ADD(createdat date deault sysdate);
+```
+<br>
+
+### 기본키
+- 기본키 생성
+```SQL
+-- PK 제약조건 추가
+ALTER TABLE 테이블명 ADD PRIMARY KEY (칼럼명1, 칼럼명2...);
+ 
+-- PK 제약조건 추가(제약조건명 지정)
+ALTER TABLE 테이블명 ADD CONSTRAINT 제약조건명 PRIMARY KEY (칼럼명1, 칼럼명2...);
+```
+
+- 기본키 삭제
+```sql
+-- 테이블의 PK 제약조건 삭제
+ALTER TABLE 테이블명 DROP PRIMARY KEY:
+```
+<br>
+
+### 외래키
+- 외래키 설정
+```sql
+ALTER TABLE 테이블명
+ADD CONSTRAINT 제약조건명 FOREIGN KEY(외래키 컬럼명)
+REFERENCES 참조테이블명(참조테이블의 기본키 컬럼명) [ON DELETE 옵션][ON UPDATE 옵션]
+
+/*
+ *  ▶ [ ] 는 생략가능하다. 
+ *
+ *  ON DELET : 참조 테이블의 튜플이 삭제되었을 때 기본 테이블에 취해야 할 사항을 지정
+ *  ON UPDATE : 참조 테이블의 참조 속성 값이 변경되었을 때 기본 테이블에 취해야 할 사항을 지정
+ */
+ 
+ /*
+  *  옵션 : 총 4가지 옵션이 있다.
+  * 
+  *  1. NO ACTION : 참조 테이블에 변화가 있어도 기본 테이블에는 아무 조취를 취하지 않는다.
+  *  
+  *  2. CASCADE : 참조 테이블의 튜플이 사제되면 기본 테이블의 관련 튜플도 삭제되고, 
+  *                            속성이 변경되면 관련 튜플의 속성 값도 모두 변경된다.
+  *               
+  *  3. SET NULL : 참조 테이블에 변화가 있으면 기본 테이블의 과련 튜플의 속성 값을 NULL로 변경한다.
+  *
+  *  4. SET DEFAULT : 참조 테이블에 변화가 있으면 기본 테이블의 관련 튜플의 속성 값을 기본값으로 변경한다.
+  */
+
+```
+
+- 외래키 삭제
+```sql
+ALTER TABLE 테이블명 DROP CONSTRAINT 제약조건명;
+```
+<br>
+
+### Unique
+- UNIQUE 제약 조건
+```SQL
+-- UNIQUE 제약조건 추가
+ALTER TABLE 테이블명 ADD UNIQUE (칼럼명);
+ 
+-- UNIQUE 제약조건 추가(제약조건명 지정)
+ALTER TABLE 테이블명 ADD CONSTRAINT 제약조건명 UNIQUE (칼럼명); 
+```
+
+- UNIQUE 제약 조건 삭제
+```SQL
+ALTER TABLE 테이블명 DROP CONSTRAINT 제약조건명;
 ```
 
 ### DML
 
 ### DCL
+
