--- a/DataBase/Oracle/기본 명령어.md
+++ b/DataBase/Oracle/기본 명령어.md
@@ -97,6 +97,22 @@ ALTER TABLE 테이블명 ADD CONSTRAINT 제약조건명 UNIQUE (칼럼명);
 ALTER TABLE 테이블명 DROP CONSTRAINT 제약조건명;
 ```
 
+### Sequecne
+- 시퀀스 생성
+```sql
+CREATE SEQUENCE 시퀀스 명 [INCREMENT BY 1] [START WITH 1]
+-- 옵션은 default로 increment by 1, start with 1이다.
+```
+- 시퀀스 수정
+```sql
+ALTER SEQUENCE 시퀀스 명 
+-- 옵션 수정 가능
+```
+- 시퀀스 삭제
+```sql
+DROP SEQUENCE 시퀀스 명
+```
+
 ### DML
 
 ### DCL
