--- a/DataBase/Oracle/오류해결.md
+++ b/DataBase/Oracle/오류해결.md
@@ -16,3 +16,14 @@
 
     - 어떤 블로그에서는 sqlplus "/as SYS"에 들어가서 로그인하면 해결된다고 하던데 난 로그인 조차 되지 않았다.
 
+### varchar2에서 clob으로 데이터타입 변경시
+- 문제 인식
+    - varchar2에서 clob으로는 데이터가 변경이 되지 않는다.
+- 해결
+```sql
+-- 새로운 컬럼을 만들고 데이터 복사후 이름변경(기존의 컬럼은 삭제)
+alter table 테이블명 add (임시컬럼명 clob);
+update 테이블명 set 임시컬럼명 = 기존컬럼명;  -- 기존 컬럼의 데이터를 임시컬럼에 복사한다.
+alter table 테이블명 drop column 기존컬럼명;
+alter table 테이블명 rename column 임시컬럼명 to 기존컬럼명;
+```
