--- a/Javascript/정규표현식/정규표현식.md
+++ b/Javascript/정규표현식/정규표현식.md
@@ -1,11 +1,12 @@
 ## 정규 표현식
+
 - [MDN](https://developer.mozilla.org/ko/docs/Web/JavaScript/Guide/%EC%A0%95%EA%B7%9C%EC%8B%9D)
 
 var regex = /([\w-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([\w-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$/;
 
-||정규 표현식|설명|
-|---|----|----|
-|([\w-\.]+)|\w|- 63개 문자(Word, 영문 대소분자 52개 + 숫자 10개 + _)에 일치|
-||\.|- 점(.)이나 별표(*)같은 특수 문자는 문자셋 내부에서는 특수 문자가 아니다. 따라서 이스케이프가 필요가 없다. |
-||-|- 하이픈을 이용하여 문자의 범위를 지정할 수 있다.|
-||+|앞의 표현식이 1외 이상 연속으로 반복되는 부분과 대응된다.|
+|            | 정규 표현식 | 설명                                                                                                        |
+| ---------- | ----------- | ----------------------------------------------------------------------------------------------------------- |
+| ([\w-\.]+) | \w          | - 63개 문자(Word, 영문 대소분자 52개 + 숫자 10개 + \_)에 일치                                               |
+|            | \.          | - 점(.)이나 별표(\*)같은 특수 문자는 문자셋 내부에서는 특수 문자가 아니다. 따라서 이스케이프가 필요가 없다. |
+|            | -           | - 하이픈을 이용하여 문자의 범위를 지정할 수 있다.                                                           |
+|            | +           | - 앞의 표현식이 1외 이상 연속으로 반복되는 부분과 대응된다.                                                 |
