--- a/DataBase/Oracle/기본 명령어.md
+++ b/DataBase/Oracle/기본 명령어.md
@@ -3,72 +3,117 @@
 ### 테이블 조작
 
 - 테이블 명 변경
+
 ```sql
 ALTER TABLE 기존 테이블명 RENAME TO 변경할 테이블명;
 ```
+
+- 테이블 삭제
+
+```sql
+DROP TABLE 테이블명
+```
+
+- 테이블의 데이터 삭제
+
+```SQL
+DELETE TABLE 테이블명
+TRUNCATE TABLE 테이블명
+
+-- 차이점
+Delete
+1. 데이터만 삭제 되면 테이블 용량은 줄어들지 않는다.
+2. commit 이전에는 Rollback 가능
+3. collback 정보를 기록하므로 truncate에 비해 느림
+4. 전체 또는 일부만 삭제 가능
+5. 삭제 행수를 반환함
+6. 데이터를 모두 Delete해도 사용했던 Storage는 Release 처리 되지 않는다.
+
+Truncate
+1. 테이블을 최초 생성된 초기상태로 만든다.
+2. 용량이 줄어들고, 인덱스 등도 모두 삭제 된다.
+3. Rollback 불가
+4. 삭제만 가능
+5. 테이블이 사용했던 storage 중 최초 테이블 생성시 할당된 Storage만 남기고 Release 처리 된다.
+```
+
 <br>
 
 ### 컬럼 조작
 
 - 컬럼 명 변경
+
 ```sql
 ALTER TABLE 테이블 명 RENAME COLUMN 기존 컬럼명 TO 변경할 컬럼명;
 ```
+
 - 컬럼 수정
+
 ```SQL
 ALTER TABLE 테이블 명 MODIFY(컬럼명 속성);
 ex) ALTER TABLE BOARD MODIFY(CONTENT VARCHAR2(2000));
 ```
+
 - 컬럼 삭제
+
 ```SQL
 ALTER TABLE 테이블 명 DROP(컬럼명);
 ```
+
 - 컬럼 추가
+
 ```SQL
 ALTER TABLE 테이블 명 ADD(컬럼명 속성);
 ex) ALTER TABLE BOARD ADD(createdat date deault sysdate);
 ```
+
 <br>
 
 ### 기본키
+
 - 기본키 생성
+
 ```SQL
 -- PK 제약조건 추가
 ALTER TABLE 테이블명 ADD PRIMARY KEY (칼럼명1, 칼럼명2...);
- 
+
 -- PK 제약조건 추가(제약조건명 지정)
 ALTER TABLE 테이블명 ADD CONSTRAINT 제약조건명 PRIMARY KEY (칼럼명1, 칼럼명2...);
 ```
 
 - 기본키 삭제
+
 ```sql
 -- 테이블의 PK 제약조건 삭제
 ALTER TABLE 테이블명 DROP PRIMARY KEY:
 ```
+
 <br>
 
 ### 외래키
+
 - 외래키 설정
+
 ```sql
 ALTER TABLE 테이블명
 ADD CONSTRAINT 제약조건명 FOREIGN KEY(외래키 컬럼명)
 REFERENCES 참조테이블명(참조테이블의 기본키 컬럼명) [ON DELETE 옵션][ON UPDATE 옵션]
 
 /*
- *  ▶ [ ] 는 생략가능하다. 
+ *  ▶ [ ] 는 생략가능하다.
  *
  *  ON DELET : 참조 테이블의 튜플이 삭제되었을 때 기본 테이블에 취해야 할 사항을 지정
  *  ON UPDATE : 참조 테이블의 참조 속성 값이 변경되었을 때 기본 테이블에 취해야 할 사항을 지정
  */
- 
+
  /*
   *  옵션 : 총 4가지 옵션이 있다.
-  * 
+  *
   *  1. NO ACTION : 참조 테이블에 변화가 있어도 기본 테이블에는 아무 조취를 취하지 않는다.
-  *  
-  *  2. CASCADE : 참조 테이블의 튜플이 사제되면 기본 테이블의 관련 튜플도 삭제되고, 
+  *
+  *  2. CASCADE : 참조 테이블의 튜플이 사제되면 기본 테이블의 관련 튜플도 삭제되고,
   *                            속성이 변경되면 관련 튜플의 속성 값도 모두 변경된다.
-  *               
+  *
   *  3. SET NULL : 참조 테이블에 변화가 있으면 기본 테이블의 과련 튜플의 속성 값을 NULL로 변경한다.
   *
   *  4. SET DEFAULT : 참조 테이블에 변화가 있으면 기본 테이블의 관련 튜플의 속성 값을 기본값으로 변경한다.
@@ -77,38 +122,49 @@ REFERENCES 참조테이블명(참조테이블의 기본키 컬럼명) [ON DELETE
 ```
 
 - 외래키 삭제
+
 ```sql
 ALTER TABLE 테이블명 DROP CONSTRAINT 제약조건명;
 ```
+
 <br>
 
 ### Unique
+
 - UNIQUE 제약 조건
+
 ```SQL
 -- UNIQUE 제약조건 추가
 ALTER TABLE 테이블명 ADD UNIQUE (칼럼명);
- 
+
 -- UNIQUE 제약조건 추가(제약조건명 지정)
-ALTER TABLE 테이블명 ADD CONSTRAINT 제약조건명 UNIQUE (칼럼명); 
+ALTER TABLE 테이블명 ADD CONSTRAINT 제약조건명 UNIQUE (칼럼명);
 ```
 
 - UNIQUE 제약 조건 삭제
+
 ```SQL
 ALTER TABLE 테이블명 DROP CONSTRAINT 제약조건명;
 ```
 
 ### Sequecne
+
 - 시퀀스 생성
+
 ```sql
 CREATE SEQUENCE 시퀀스 명 [INCREMENT BY 1] [START WITH 1]
 -- 옵션은 default로 increment by 1, start with 1이다.
 ```
+
 - 시퀀스 수정
+
 ```sql
-ALTER SEQUENCE 시퀀스 명 
+ALTER SEQUENCE 시퀀스 명
 -- 옵션 수정 가능
 ```
+
 - 시퀀스 삭제
+
 ```sql
 DROP SEQUENCE 시퀀스 명
 ```
@@ -116,4 +172,3 @@ DROP SEQUENCE 시퀀스 명
 ### DML
 
 ### DCL
-
