--- a/Linux/1.리눅스 일반/1.리눅스의 이해/3.boot Manager.md
+++ b/Linux/1.리눅스 일반/1.리눅스의 이해/3.boot Manager.md
@@ -1,26 +1,53 @@
 ### 부트로더
+
 ---
+
 1. 부트로더 기능
+
 - 부트 스트랩 로더(bootstrap loader)의 준말로 컴퓨터를 사용자가 사용할 수 있도록 디스크 플래시에 저장된 운영체제를 읽어 주기억장치에 적재해 주는 프로그램
+- 부트로더(boot loader)는 운영체제가 시동되기 이전에 미리 실행되면서 커널이 올바르게 시동되기위해 필요한 모든 관련 작업을 마무리하고 최종적으로 운영체제를 시동시키기 위한 프로그램
+- 부트로더(boot loader)는 부트 매니저라고도 부르며 크기가 512바이트로 하드디스크의 첫번째 섹터인 MBR(Master Boot Record)에 위치한다.
+- x86 아키텍처에서 많이 사용되는 부트로더는 LILO(LInux LOader)와 GRUB(GRand Unified Bootloader)이다.
 
 2. GRUB (GRand Unified Bootloader)
+
 - 리눅스의 전통적인 부트로더로 사용되어 왔던 LILO(LInux LOader)의 단점을 보완한 것이다.
+- 다른 운영체제와 멀티부팅할 수 있다.
+- 환경설정 파일
+  - grub의 환경 설정파일은 `/boot/grub/grub.conf` 또는 `/etc/grub.conf`이다.
 
 <br>
 
 ### 런레벨(Run Level)
+
 ---
+
 1. 리눅스 부팅 시 작동하는 서비스들이 있다. 런레벨에 따라 작동하는 서비스를 조정 가능하다.
+   - 리눅스 부팅의 마지막 단계에서 모든 프로세스의 부모 프로세스인 init이 생성된다.
 2. 7가지의 런레벨 중 리눅스 가동 시 특정 모드의 레벨을 디폴트로 할 경우 파일 /etc/inittab에 설정한다.
+
+| 런레벨 | 기능                                                                                                                                                                                    |
+| ------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 0      | 시스템 종료(shutdown), 명령어 halt 또는 init 0과 동일                                                                                                                                   |
+| 1      | - 단일 사용자 모드(root만 로그인 할 수 있는 모드) <br> - 네트워크, 서버, 파일 공유 서비스를 제공하지 않음 <br> - root 패스워드 분실, 파일 시스템 점검 및 복구, 시스템 점검을 할 때 접근 |
+| 2      | 네트워크가 없는 다중 사용자 모드                                                                                                                                                        |
+| 3      | 텍스트 모드(CUI)에 의한 다중 사용자 모드                                                                                                                                                |
+| 4      | 미사용                                                                                                                                                                                  |
+| 5      | 그래픽 모드(GUI)에 의한 다중 사용자 모드                                                                                                                                                |
+| 6      | 시스템 재시작(재부팅), 명령어 reboot 또는 init 6과 동일                                                                                                                                 |
 
 <br>
 
 ### 로그인과 로그아웃
+
 ---
+
+1. 리눅스는 X 윈도우상에서의 로그인/로그아웃과 콘솔상에서의 로그인/로그아웃이 있다.
+
 1. 로그인
-    - 입력한 패스워드와 파일 /etc/passwd 필드를 비교한다.
-    - 셀 설정 파일을 실행한다.
-    - 로그인 셀을 실행한다.
-        - 로그인 셀은 파일 /etc/passwd 의 마지막 필드에 정의 되어 있다.
-2. 로그아웃
-    - logout, exit 또는 조합키(ctrl + d)를 사용한다.
+   - 입력한 패스워드와 파일 /etc/passwd 필드를 비교한다.
+   - 셀 설정 파일을 실행한다.
+   - 로그인 셀을 실행한다.
+     - 로그인 셀은 파일 /etc/passwd 의 마지막 필드에 정의 되어 있다.
+1. 로그아웃
+   - logout, exit 또는 조합키(ctrl + d)를 사용한다.
