--- a/Linux/1.리눅스 일반/2.리눅스 기본 명령어/1.사용자 생성 및 계정 관리.md
+++ b/Linux/1.리눅스 일반/2.리눅스 기본 명령어/1.사용자 생성 및 계정 관리.md
@@ -1,35 +1,38 @@
 ### 리눅스 명령어 개요
+
 ---
+
 1. which
-    - 명령어의 경로를 확인하는 명령어
-    - 명령어의 위치를 찾아주거나 alias 를 보여주는 명령어
-    ```
-    which 명령어
-    ```
-    <br>
-2. alais
-    - 자주 사용하는 명령어를 특정 문자로 입력해 두고 명령어 대신 해당 문자를 사용할 수 있게 하는 명령어
-    ```
-    alais 별명='명령어'
-    ```
-<br>
+   - 명령어의 경로를 확인하는 명령어
+   - 명령어의 위치를 찾아주거나 alias 를 보여주는 명령어
+   - 사용자가 현재 위치에서 명령을 실행시켰을 때 어떤 명령이 실행되는지를 알고 확인할 수 있다.
+   ```
+   which 명령어
+   ```
+   <br>
+2. alais - 자주 사용하는 명령어를 특정 문자로 입력해 두고 명령어 대신 해당 문자를 사용할 수 있게 하는 명령어
+   `alais 별명='명령어'`
+   <br>
 
 3. unalias
-    - alais 기능 해제
+   - alais 기능 해제
+
 ```
 unalias [옵션][단축 명령어]
 ```
-|옵션|설명|
-|---|---|
-|-a|설정된 모든 alais 해제|
+
+| 옵션 | 설명                   |
+| ---- | ---------------------- |
+| -a   | 설정된 모든 alais 해제 |
 
 <br>
 
 4. 환경변수 PATH
-    - PATH는 실행 파일들의 디렉터리 위치를 저장해 놓은 환경 변수이다.
-    - 명령어 입력자의 현재 작업 디렉터리와 상관없이 특정 명령어를 입력하면 PATH 변수에 저장되어 있는 경로에서 해당 명령어를 찾아 실행한다.
-    - 명령어 echo $PATH 는 지정된 PATH 값을 확인할 수 있다.
-    - 기존의 PATH에 새로운 경로를 추가하는 방법에는 명령어 PATH나 홈 디렉터리의 .bash_profile에 PATH를 추가한다. 기존 경로와 새 경로는 콜론(:)으로 구분한다.
+   - PATH는 실행 파일들의 디렉터리 위치를 저장해 놓은 환경 변수이다.
+   - 명령어 입력자의 현재 작업 디렉터리와 상관없이 특정 명령어를 입력하면 PATH 변수에 저장되어 있는 경로에서 해당 명령어를 찾아 실행한다.
+   - 명령어 echo $PATH 는 지정된 PATH 값을 확인할 수 있다.
+   - 기존의 PATH에 새로운 경로를 추가하는 방법에는 명령어 PATH나 홈 디렉터리의 .bash_profile에 PATH를 추가한다. 기존 경로와 새 경로는 콜론(:)으로 구분한다.
+
 ```
 export 변수명=$변수명:변수값
 ```
@@ -38,143 +41,184 @@ export 변수명=$변수명:변수값
 <br>
 
 ### 리눅스 도움말
+
 ---
+
 1. man
-    - 리눅스에서 사용하는 명령어들의 메뉴얼을 제공한다.
+   - 리눅스에서 사용하는 명령어들의 메뉴얼을 제공한다.
+
 ```
 man [섹션][옵션] 명령어
 ```
-|옵션|설명|
-|----|----|
-|-a|찾고자 하는 명령어의 검색된 메뉴얼 페이지를 모두 출력|
-|-h|사용법을 출력|
+
+| 옵션 | 설명                                                  |
+| ---- | ----------------------------------------------------- |
+| -a   | 찾고자 하는 명령어의 검색된 메뉴얼 페이지를 모두 출력 |
+| -h   | 사용법을 출력                                         |
 
 <br>
 
 2. info
-    - 리눅스 명령어의 사용 방법, 옵션 등을 나타낸다.
+   - 리눅스 명령어의 사용 방법, 옵션 등을 나타낸다.
+
+```
+info 명령어
+```
 
 <br>
 
 3. whatis
-    - 명령어에 대한 기능을 간략하게 나타낸다.
+   - 명령어에 대한 기능을 간략하게 나타낸다.
+
+```
+whatis 명령어
+```
 
 <br>
 
 4. manpath
-    - man 페이지의 위치 경로를 검색하여 표시해 주는 명령어
+   - man 페이지의 위치 경로를 검색하여 표시해 주는 명령어
+
+```
+manpath [명령어]
+```
 
 <br>
 
 5. whereis
-    - 찾고자 하는 명령어의 실행 파일 절대 경로와 소스코드, 설정 파일 및 메뉴얼 페이지를 찾아 출력하는 명령어
+
+   - 찾고자 하는 명령어의 실행 파일 절대 경로와 소스코드, 설정 파일 및 메뉴얼 페이지를 찾아 출력하는 명령어
+
+     | 옵션 | 설명                          |
+     | ---- | ----------------------------- |
+     | -b   | 바이너리 파일만 찾음          |
+     | -m   | 지정된 매뉴얼 섹션에서만 찾음 |
+     | -M   | 매뉴얼 페이지의 위치를 제한   |
+     | -u   | 특정 파일을 제외              |
+
+```
+where [옵션] 명령어
+```
 
 <br>
 
 6. apropos
-    - 맨(man) 페이지 설명에서 지정한 키워드를 포함하고 있는 명령어
+   - 맨(man) 페이지 설명에서 지정한 키워드를 포함하고 있는 명령어
 
 <br>
 <br>
 
 ### 사용자 생성 명령어
+
 ---
+
 1. useradd
-    - 계정을 생성하는 명령어로 adduser와 동일한 기능을 갖는다.
+   - 계정을 생성하는 명령어로 adduser와 동일한 기능을 갖는다.
 
 <br>
 
 2. passwd
-    - 생성된 계정자의 패스워드를 입력 및 변경하는 명령어
+   - 생성된 계정자의 패스워드를 입력 및 변경하는 명령어
 
 <br>
 
 3. su
-    - switch user (substitute user)의 줄임말
-    - 현재의 사용자 계정에서 로그아웃 하지 않고 다른 사용자 계정으로 로그인하여 해당 사용자의 권한을 획득하는 명령어
+   - switch user (substitute user)의 줄임말
+   - 현재의 사용자 계정에서 로그아웃 하지 않고 다른 사용자 계정으로 로그인하여 해당 사용자의 권한을 획득하는 명령어
 
 <br>
 <br>
 
 ### 사용자 관련 파일
+
 ---
-1. /etc/default/useradd
-    - 명령어 useradd 로 사용자 계정을 추가할 때 사용되는 정보를 읽어오는 파일
-<br>
+
+1. /etc/default/useradd - 명령어 useradd 로 사용자 계정을 추가할 때 사용되는 정보를 읽어오는 파일
+   <br>
 
 2. /etc/passwd
-    - 계정의 정로를 가지고 있는 파일로 리눅스에 로그인할 때 사용된다. 
+   - 계정의 정로를 가지고 있는 파일로 리눅스에 로그인할 때 사용된다.
 
 <br>
 
 3. /etc/shadow
-    - 계정자의 패스워드 정보가 암호화되어 있는 파일로 암호화 패스워드 및 계정의 유효 기간 등을 기록하고 있는 파일
+   - 계정자의 패스워드 정보가 암호화되어 있는 파일로 암호화 패스워드 및 계정의 유효 기간 등을 기록하고 있는 파일
 
 <br>
 
 4. /etc/login.defs
-    - 사용자 계정 설정과 관련된 기본값을 정의한 파일
+   - 사용자 계정 설정과 관련된 기본값을 정의한 파일
 
 <br>
 
 ### 사용자 계정 관리
+
 ---
+
 1. usermod
-    - 디렉터리 /home 에 위치한 사용자들의 정보를 변경하는 명령어
+   - 디렉터리 /home 에 위치한 사용자들의 정보를 변경하는 명령어
 
 <br>
 
 2. userdel
-    - 기존 계정 정보를 삭제하는 명령어
+   - 기존 계정 정보를 삭제하는 명령어
 
 <br>
 
 3. chage
-    - 패스워드의 만료 정보를 변경하는 리눅스 명령어
+   - 패스워드의 만료 정보를 변경하는 리눅스 명령어
 
 <br>
 <br>
 
 ### 그룹관리
+
 ---
+
 1. /etc/group
-    - 사용자 그룹에 대해 정의되어 있는 파일
+   - 사용자 그룹에 대해 정의되어 있는 파일
 
 <br>
 
 2. /etc/gshadow
-    - 그룹의 암호를 MD5로 하여 저장하며 그룹의 소유주, 구성원 설정이 가능
+   - 그룹의 암호를 MD5로 하여 저장하며 그룹의 소유주, 구성원 설정이 가능
 
 <br>
 
 3. groupadd
-    - 새로운 그룹을 생성하는 명령어
+   - 새로운 그룹을 생성하는 명령어
 
 <br>
 
 4. groupdel
-    - 기존의 그룹을 삭제하는 명령어
+   - 기존의 그룹을 삭제하는 명령어
 
 <br>
 
 5. groupmod
-    - 그룹의 설정을 변경하는 명령어
+   - 그룹의 설정을 변경하는 명령어
 
 <br>
 
 ### 사용자 조회 명령어
+
 ---
+
 1. users
-    - 시스템에 로그인한 사용자 정보를 출력하는 명령어
+
+   - 시스템에 로그인한 사용자 정보를 출력하는 명령어
 
 2. who
-    - 현재 시스템에 접속해 있는 사용자들을 조회하는 명령어
+
+   - 현재 시스템에 접속해 있는 사용자들을 조회하는 명령어
 
 3. w
-    - 현재 접속 중인 사용자들의 정보를 나타내는 명령어
+
+   - 현재 접속 중인 사용자들의 정보를 나타내는 명령어
 
 4. id
-    - 사용자 계정의 uid, gid, group 을 확인하는 명령어
+
+   - 사용자 계정의 uid, gid, group 을 확인하는 명령어
 
 5. groups
-    - 사용자 계정이 속한 그룹 목록을 확인하는 명령어
+   - 사용자 계정이 속한 그룹 목록을 확인하는 명령어
