--- a/DataBase/SQLD/2.2.SQL 활용/01.표준 조인/01.표준 조인.md
+++ b/DataBase/SQLD/2.2.SQL 활용/01.표준 조인/01.표준 조인.md
@@ -12,21 +12,74 @@
 
 ## 4.NATURAL JOIN
 
+두 테이블 간의 동일한 이름을 갖는 모든 칼럼들에 대해 `EQUI(=) JOIN`을 수행한다. NATURAL JOIN이 명시되면, 추가로 `USING 조건절`, `ON 조건절`, `WHERE 절`에서 `JOIN 조건`을 **정의할 수 없다**.
+
+```SQL
+-- DEPTNO라는 공통된 컬럼을 자동으로 인식하여 JOIN을 처리한다.
+SELECT DEPTNO, EMPNO, ENAME, DNAME FROM EMP NATURAL JOIN DEPT;
+```
+
+`*` 와일드 카드처럼 별도의 컬럼 순서를 저장하지 않으면 NATURAL JOIN의 기준이 되는 칼럼들이 다른 칼럼보다 먼저 출력된다.
+
 <br>
 
 ## 5.USING 조건절
+
+NATURAL JOIN에서는 모든 일치되는 칼럼들에 대해 JOIN이 이루어지지만, FROM 절의 USING 조건절을 이용하면 같은 이름을 가진 칼럼들 중에서 원하는 컬럼에 대해서만 선택적으로 EQUI JOIN을 할 수 있다.
+
+```SQL
+SELECT * FROM DEPT JOIN DEPT_TEMP USING (DNAME);
+-- 실행 결과 컬럼
+-- DNAME DEPTNO LOC DEPTNO LOC
+
+SELECT * FROM DEPT JOIN DEPT_TEMP USING (LOC, DEPTNO)
+-- 실행 결과 컬럼
+-- LOC DEPTNO DNAME DNAME
+```
 
 <br>
 
 ## 6.ON 조건절
 
+JOIN 서술부(ON 조건절)와 비 JOIN 서술부(WHERE 조건절)를 분리하여 이해가 쉬우며, 칼럼명이 다르더라도 JOIN 조건을 사용할 수 있다는 장점이 있다.
+
+[예제] 사원 테이블과 부서 테이블에서 사원 번호의 사원 이름, 소속부서 코드, 소속부서 이름을 출력한다.
+
+```SQL
+SELECT E.EMPNO, E.ENAME, E.DEPNO, D.DNAME FROM EMP E JOIN DEPT D ON(E.DEPTNO = D.DEPNO);
+-- 실행 결과 컬럼
+-- EMPNO, ENAME,.DEPNO, DNAME
+```
+
+NATURAL JOIN의 JOIN 조건은 기본적으로 같은 이름을 가진 모든 칼럼들에 대한 동등 조건이지만, 임의의 JOIN 조건을 지정하거나, 이름이 다른 칼럼명을 JOIN 조건으로 사용하거나, JOIN 칼럼을 명시하기 위해서는 `ON 조건절`을 사용한다.
+
+`ON 조건절`을 사용한 JOIN의 경우는 ALIAS나 테이블 명과 같은 접두사를 사용하여 SELECT에 사용되는 컬럼을 논리적으로 명확하게 지정해주어야 한다.
+
 <br>
 
 ### 가. WHERE 절과 혼용
 
+`ON 조건절`과 `WHERE 검색 조건`은 출돌 없이 사용할 수 있다.
+
+[예제] 부서코드 30인 부서의 소속사원 이름 및 소속 부서 코드, 부서 코드, 부서 이름을 찾아본다.
+
+```SQL
+SELECT E.ENAME, E.DEPTNO, D.DEPTNO, D.DNAME
+FROM EMP E JOIN DEPT D ON (E.DEPNO = D.DEPTNO)
+WHERE E.DEPTNO = 30;
+```
+
 <br>
 
 ### 나. ON 조건절 + 데이터 검증 조건 추가
+
+ON 조건절에 JOIN 조건 외에도 데이터 검색 조건을 추가할 수 있으나, 검색 조건 목적인 경우는 WHERE 절을 사용할 것을 권고한다. (다만, 아우터 조인에서 조인의 대상을 제한하기 위한 목적으로 사용되는 추가 조건의 경우는 ON 절에 표기되어야 한다.)
+
+```SQL
+SELECT E.ENAME, E.MGR, D.DEPTNO, D.DNAME
+FROM EMP E JOIN DEPT D
+ON (E.DEPTNO = D.DEPTNO AND E.MGR = 7698);
+```
 
 <br>
 
@@ -72,6 +125,19 @@ AND E.DEPTNO = T.DEPTNO;
 <br>
 
 ### 다. FULL OUTER JOIN
+
+조인 수행시 좌측, 우측 테이블의 모든 데이터를 읽어 JOIN 하여 결과를 생성한다. 즉 TABLE A와 B가 있을 때(TABLE 'A', 'B' 모두 기준이 됨), RIGHT OUTER JOIN과 LEFT OUTER JOIN 의 결과를 합집합으로 처리한 결과와 동일하다.
+
+UNION ALL이 아닌 UNION 기능과 같으므로 중복되는 데이터는 삭제한다.
+
+FULL JOIN으로 OUTER 키워드를 생략할 수 있다.
+
+```sql
+SELECT * FROM DEPT FULL OUTER JOIN DEPT_TEMP ON DEPT.DEPTNO = DEPT_TEMP.DEPTNO;
+
+-- OUTER 키워드 생략 가능
+SELECT * FROM DEPT FULL JOIN DEPT_TEMP ON DEPT.DEPTNO = DEPT_TEMP.DEPTNO;
+```
 
 <br>
 
