--- a/DataBase/SQLD/2.2.SQL 활용/04.서브 쿼리/04.서브 쿼리.md
+++ b/DataBase/SQLD/2.2.SQL 활용/04.서브 쿼리/04.서브 쿼리.md
@@ -42,12 +42,12 @@
 - 단일 행 서브쿼리
 
   - 서브쿼리의 실행 결과가 항상 1건 이하인 서브쿼리를 의미한다.
-  - 단일 행 서브쿼리는 단일 행 비교 연산자와 함께 사용된다. (=, <, <=, >, >=, <>)
+  - 단일 행 서브쿼리는 단일 행 비교 연산자와 함께 사용된다. (`=`, `<`, `<=`, `>`, `>=`, `<>`(같지 않음 `!=`과 같다.))
 
 - 다중 행 서브쿼리
 
   - 서브쿼리의 실행 결과가 여러 건인 서브쿼리를 의미한다.
-  - 다중행 서브쿼리는 다중 행 비교 연산자와 함께 사용된다. (IN, ALL, ANY, SOME, EXISTS)
+  - 다중행 서브쿼리는 다중 행 비교 연산자와 함께 사용된다. (`IN`, `ALL`, `ANY`, `SOME`, `EXISTS`)
 
 - 다중 컬럼 서브쿼리
   - 서브쿼리의 실행 결과로 여러 칼럼을 반환한다.
