--- a/DataBase/Oracle/기본 명령어.md
+++ b/DataBase/Oracle/기본 명령어.md
@@ -171,4 +171,19 @@ DROP SEQUENCE 시퀀스 명
 
 ### DML
 
+데이터 삽입
+
+```SQL
+INSERT INTO 테이블명 (COL1, COL2, COL3, ...)
+VALUES('VALUE1', 'VALUE2', 'VALUE3', ...);
+```
+
+데이터 수정
+
+```SQL
+UPDATE 테이블명
+SET col1='value1', col2='value2'...
+WHERE col='value';
+```
+
 ### DCL
