--- a/Linux/2.리눅스 운영 및 관리/1.파일 시스템 관련 명령어/1.권한 및 그룹 설정.md
+++ b/Linux/2.리눅스 운영 및 관리/1.파일 시스템 관련 명령어/1.권한 및 그룹 설정.md
@@ -1,4 +1,5 @@
 ## 권한 및 그룹 설정
+
 - 리눅스 시스템의 모든 파일과 디렉터리에는 접근 권한(permission)과 소유권(ownership)이 부여됨
 - ls -l로 확인한다.
 
@@ -6,43 +7,50 @@
 -rw-rw-r-- 1 noah noah 53 2020-10-10 10:10 TST
     1      2  3    4    5     6        7    8
 ```
-||의미|
-|---|---|
-|1|- 파일 허가권(permission) <br> - 파일 유형과 접근 권한으로 구성|
-|2|물리적 파일 연결 개수|
-|3|파일 소유자명|
-|4|파일 소유 그룹명|
-|5|파일 크기(바이트 단위)|
-|6|파일이 마지막으로 변경된 시간|
-|7|파일명|
+
+|     | 의미                                                            |
+| --- | --------------------------------------------------------------- |
+| 1   | - 파일 허가권(permission) <br> - 파일 유형과 접근 권한으로 구성 |
+| 2   | 물리적 파일 연결 개수                                           |
+| 3   | 파일 소유자명                                                   |
+| 4   | 파일 소유 그룹명                                                |
+| 5   | 파일 크기(바이트 단위)                                          |
+| 6   | 파일이 마지막으로 변경된 시간                                   |
+| 7   | 파일명                                                          |
 
 <br>
 <br>
 
 ### 소유권(Ownership)과 관련 명령어
+
 ---
+
 - 소유권은 임의의 파일 또는 디렉터리에 대해 사용자와 그룹들의 소유 권한을 나타낸 것이다.
 - 그룹은 사용자들의 시스템 운영 특성에 따라 묶어 놓은 것으로, 같은 그룹에 속한 사용자들을 파일 또는 디렉터리에 대해 동일한 소유권과 작업 권한을 갖는다.
 
 <br>
 
 1. chown
-    - chown 는 파일과 디렉터리의 사용자 소유권과 그룹 소유권을 변경
+   - chown 는 파일과 디렉터리의 사용자 소유권과 그룹 소유권을 변경
+
 ```
 chown [옵션] 소유자 [:그룹명] 파일명
 ```
-|옵션|설명|
-|---|---|
-|-R|하위 디렉터리를 포함하여 디렉터리 내부의 모든 파일의 소유권 변경|
+
+| 옵션 | 설명                                                             |
+| ---- | ---------------------------------------------------------------- |
+| -R   | 하위 디렉터리를 포함하여 디렉터리 내부의 모든 파일의 소유권 변경 |
 
 <br>
 
 - ex) 디렉터리 noah 의 모든 파일과 하위 디렉터리의 소유권을 root로 변경한다.
+
 ```
 chown -R root Youngjin
 ```
 
 - ex) 파일 TST 의 그룹 소유권은 root로 변경한다.
+
 ```
 chown :root TST
 ```
@@ -50,32 +58,37 @@ chown :root TST
 <br>
 
 2. chgrp
-    - change group을 줄인 명령어로 파일이나 디렉터리의 그룹 소유권을 변경한다.
-    - chown 소유자와 소유 그룹을 모두 변경할 수 있지만 chgrp는 그룹 소유권만을 변경한다.
+   - change group을 줄인 명령어로 파일이나 디렉터리의 그룹 소유권을 변경한다.
+   - chown 소유자와 소유 그룹을 모두 변경할 수 있지만 chgrp는 그룹 소유권만을 변경한다.
+
 ```
 chgrp [옵션] 그룹명 파일명
 ```
-|옵션|설명|
-|---|---|
-|-R|하위 디렉터리를 포함하여 디렉터리 내부의 모든 파일의 소유권 변경|
+
+| 옵션 | 설명                                                             |
+| ---- | ---------------------------------------------------------------- |
+| -R   | 하위 디렉터리를 포함하여 디렉터리 내부의 모든 파일의 소유권 변경 |
 
 <br>
 <br>
 
 ### 허가권(permission)과 관련 명령어
+
 ---
+
 ```
 - rw-rw-r--
 1    2
 ```
+
 - 파일 허가권의 첫 번째 자리는 파일 유형을 기호로 정의한다.
 - 파일은 일반 파일, 디렉터리 파일, 특수 파일로 나뉜다.
 - ls -l/dev를 실행하면 파일유형이 'b'나 'c'인 파일들을 확인할 수 있다.
 
-|기호|파일 유형|
-|---|---|
-|-|일반 파일|
-|d|디렉터리 파일|
+| 기호 | 파일 유형     |
+| ---- | ------------- |
+| -    | 일반 파일     |
+| d    | 디렉터리 파일 |
 
 <br>
 
@@ -84,100 +97,109 @@ chgrp [옵션] 그룹명 파일명
 <br>
 
 1. chmod
-    - 파일이나 디렉터리에 접근 허가권을 변경하는 명령어
+   - 파일이나 디렉터리에 접근 허가권을 변경하는 명령어
+
 ```
 chmod [옵션] 파일명
 ```
 
-|옵션|설명|
-|---|---|
-|-R|하위 디렉터리를 포함하여 디렉터리 내부의 모든 파일의 소유권 변경|
+| 옵션 | 설명                                                             |
+| ---- | ---------------------------------------------------------------- |
+| -R   | 하위 디렉터리를 포함하여 디렉터리 내부의 모든 파일의 소유권 변경 |
 
 <br>
 
 권한 변경은 숫자모드와 기호모드가 있다.
+
 - 숫자 모드
 
-|기호|숫자(2진수)|숫자(8진수|의미|
-|---|---|---|---|
-|rwx|111|7|읽기, 쓰기, 실행 권한을 모두 가짐|
-|rw-|110|6|읽기와 쓰기 권한을 가짐|
-|r-w|101|5|읽기와 실행 권한을 가짐|
-|r--|100|4|읽기 권한|
-|-wx|011|3|쓰기와 실행 권한|
-|-w-|010|2|쓰기 권한|
-|--x|001|1|실행 권한|
-|---|000|0|권한 없음|
+| 기호 | 숫자(2진수) | 숫자(8진수 | 의미                              |
+| ---- | ----------- | ---------- | --------------------------------- |
+| rwx  | 111         | 7          | 읽기, 쓰기, 실행 권한을 모두 가짐 |
+| rw-  | 110         | 6          | 읽기와 쓰기 권한을 가짐           |
+| r-w  | 101         | 5          | 읽기와 실행 권한을 가짐           |
+| r--  | 100         | 4          | 읽기 권한                         |
+| -wx  | 011         | 3          | 쓰기와 실행 권한                  |
+| -w-  | 010         | 2          | 쓰기 권한                         |
+| --x  | 001         | 1          | 실행 권한                         |
+| ---  | 000         | 0          | 권한 없음                         |
 
 <br>
 
 - 기호 모드
 
-|기호모드||의미|
-|---|---|---|---|
-|사용자|u|소유자|
-||g|그룹|
-||o|기타 사용자|
-||a|모든 사용자(u + g + o)|
-|연산자|+|허가권 부여|
-||-|허가권 제거|
-||=|특정 사용자에게 허가권 지정|
-|권한|r|읽기|
-||W|쓰기|
-||x|실행|
+| 기호모드 | -   | 의미                        |
+| -------- | --- | --------------------------- |
+| 사용자   | u   | 소유자                      |
+|          | g   | 그룹                        |
+|          | o   | 기타 사용자                 |
+|          | a   | 모든 사용자(u + g + o)      |
+| 연산자   | +   | 허가권 부여                 |
+|          | -   | 허가권 제거                 |
+|          | =   | 특정 사용자에게 허가권 지정 |
+| 권한     | r   | 읽기                        |
+|          | W   | 쓰기                        |
+|          | x   | 실행                        |
+
 - ex) chmod u+w : 소유자에게 쓰기 원한 부여
 - ex) chmod u-x : 소유자에게 실행 권한 제거
 - ex) chmod o=rx : 기타 사용자에게 읽기와 실행 권한 부여
-
 
 <br>
 <br>
 
 2. umask
-    - 새로 생성된 파일이나 디렉터리의 기본 허가권을 가진다.
-    - 파일의 기본 권한은 666, 디렉터리의 기본 권한은 777, 명령어 umask는 디폴트 권한 값을 변경한다.
+   - 새로 생성된 파일이나 디렉터리의 기본 허가권을 가진다.
+   - 파일의 기본 권한은 666, 디렉터리의 기본 권한은 777, 명령어 umask는 디폴트 권한 값을 변경한다.
+
 ```
 umask [옵션] [값]
 ```
 
-|옵션|설명|
-|---|---|
-|-S|umask 값을 문자로 표기|
+| 옵션 | 설명                   |
+| ---- | ---------------------- |
+| -S   | umask 값을 문자로 표기 |
 
 <br>
 
 - 파일이나 디렉터리 생성 시 디폴트 권한 값에서 설정한 umask값을 뺀 값을 기본 허가권을 설정한다.
-    - ex) umask : 022 
-        - 디폴트 파일 권한 : 644 (666 - 022)
-        - 디폴트 디렉터리 권한 : 755 (777 - 022)
+  - ex) umask : 022
+    - 디폴트 파일 권한 : 644 (666 - 022)
+    - 디폴트 디렉터리 권한 : 755 (777 - 022)
 - 0002와 같이 4자리 수로 설정한다면, 첫번째 자리의 0은 특수 권한 설정 값이다.
-    - ex) umask : 0002
-        - 디폴트 파일 권한 : 664 (0666 - 0002)
-        - 디폴트 디렉터리 권한 : 775 (0777 - 0002)
+  - ex) umask : 0002
+    - 디폴트 파일 권한 : 664 (0666 - 0002)
+    - 디폴트 디렉터리 권한 : 775 (0777 - 0002)
 
 <br>
 <br>
 
 ### 특수권한
----
-1. SetUID 와 SetGID
-    - 프로세스가 실행되는 동안 해당 프로세스의 root 권한을 임시로 가져오는 기능
-    - 프로세스가 사용자보다 높은 수준의 접근을 요구할 때 파일 접근 제한으로 인해 원활한 기능을 제공할 수 없기 때문에 이러한 문제점을 해결하기 위한 방법
 
-    추후에 내용을 추가하자 (사용할 시점이 오면 다시 정리)
+---
+
+1. SetUID 와 SetGID
+
+   - 프로세스가 실행되는 동안 해당 프로세스의 root 권한을 임시로 가져오는 기능
+   - 프로세스가 사용자보다 높은 수준의 접근을 요구할 때 파일 접근 제한으로 인해 원활한 기능을 제공할 수 없기 때문에 이러한 문제점을 해결하기 위한 방법
+
+   추후에 내용을 추가하자 (사용할 시점이 오면 다시 정리)
 
 <br>
 
 2. Stick bit
-    - stick bit가 설정되어 있는 디레터리 안의 내용은 해당 파일의 소유자나 root 만이 변경이 가능하게 하여 공용 디렉터리라도 권한이 제약을 두어 다른 사용자들의 파일을 보호하기 위한 목적으로 만든 것
 
-    추후에 내용을 추가하자 (사용할 시점이 오면 다시 정리)
+   - stick bit가 설정되어 있는 디레터리 안의 내용은 해당 파일의 소유자나 root 만이 변경이 가능하게 하여 공용 디렉터리라도 권한이 제약을 두어 다른 사용자들의 파일을 보호하기 위한 목적으로 만든 것
+
+   추후에 내용을 추가하자 (사용할 시점이 오면 다시 정리)
 
 <br>
 <br>
 
 ### 디스크 쿼터(Disk Quota)
+
 ---
- - 파일 시스템마다 사용자나 그룹이 생성할 수 있는 파일의 용량 및 개수를 제한하는 것
- 
-    추후에 내용을 추가하자 (사용할 시점이 오면 다시 정리)
+
+- 파일 시스템마다 사용자나 그룹이 생성할 수 있는 파일의 용량 및 개수를 제한하는 것
+
+  추후에 내용을 추가하자 (사용할 시점이 오면 다시 정리)
