--- a/Spring/Thymeleaf/사용기.md
+++ b/Spring/Thymeleaf/사용기.md
@@ -1,9 +1,33 @@
 ### th:attr
-```html
-<input type='text' th:attr='id=example + ${example.id}, name=examples[+ ${example.id} +].example' class='form-control' th:value="${example.example}" readonly>
-```
-- `th:attr` 는 태크에서 한번만 사용이 기능하다.
-    - `th:attr`를 두번 명시하면 expression 에러 발생한다.
 
-### 참고 자료
-- [Thymeleaf 간단 메뉴얼](http://progtrend.blogspot.com/2019/05/thymeleaf.html)
+```html
+<input
+  type="text"
+  th:attr="id=example + ${example.id}, name=examples[+ ${example.id} +].example"
+  class="form-control"
+  th:value="${example.example}"
+  readonly
+/>
+```
+
+- `th:attr` 는 태크에서 한번만 사용이 기능하다.
+  - `th:attr`를 두번 명시하면 expression 에러 발생한다.
+
+참고 자료 ([Thymeleaf 간단 메뉴얼](http://progtrend.blogspot.com/2019/05/thymeleaf.html))
+
+---
+
+<br>
+
+### 속성 내에 출력
+
+<br>
+
+속성 전체가 아닌 일부의 내용에 추가 하고 싶을 때, 텍스트 조합을 사용한다.
+
+```html
+<div th:onclick="'clk_event1('+ ${item.menuid} + ')'">클릭</div>
+<div th:onclick="|clk_event1( ${item.menuid} )|">클릭</div>
+```
+
+참고자료 ([Thymeleaf 출력 방법](https://comnic.tistory.com/18))
