DataBase/SQLD updated

--- a/DataBase/SQLD/2.2.SQL 활용/01.표준 조인/01.표준 조인.md
+++ b/DataBase/SQLD/2.2.SQL 활용/01.표준 조인/01.표준 조인.md
@@ -4,9 +4,24 @@
 
 ## FROM 절 JOIN 형태
 
+`INNER JOIN`은 `where` 절에서부터 사용하던 `join`의 default 옵션으로 join 조건에서 동일한 값이 있는 행만 반환한다. <br>
+
 <br>
 
 ## 3.INNER JOIN
+
+`inner join`은 `outer join`과 대비하여 내부 `join`이라고 하며 `join` 조건에서 동일한 값이 있는 행만 반환한다. `inner join` 표시는 그 동안 `where` 절에서 사용하던 `join` 조건을 `from절`에서 정의하겠다는 표시이므로 `using 조건절`이나 `on 조건절`을 필수적으로 사용해야 한다.
+
+```sql
+-- WHERE 절 JOIN 조건
+SELECT EMP.DEPTNO, EMPNO, ENAME, DNAME, FROM EMP, DEPT WHERE EMP.DEPTNO = DEPT.DEPTNO;
+
+-- INNER JOIN (위와 같은 결과를 얻을수 있다.)
+SELECT EMP.DEPTNO, EMPNO, ENAME, DNAME, FROM EMP INNER JOIN DEPT ON EMP.DETPNO = DETP.DEPTNO;
+
+-- INNER JOIN의 디폴트 옵션으로 아래 SQL문과 같이 생략 가능함
+SELECT EMP.DEPTNO, EMPNO, ENAME, DNAME, FROM EMP JOIN DEPT ON EMP.DETPNO = DETP.DEPTNO;
+```
 
 <br>
 
@@ -114,13 +129,44 @@ AND E.DEPTNO = T.DEPTNO;
 
 ## 8. OUTER JOIN
 
+INNER JOIN 과 대비하여 OUTER JOIN 이라고 불리며, JOIN 조건에서 동일한 값이 없는 행도 반환할 때 사용할 수 있다.<br>
+TAB1의 모든 값에 대해 TAB2의 데이터가 반드시 존재한다는 보장이 없는 경우 OUTER JOIN 을 사용하여 해결이 가능하다.<br>
+USING 조건절이나 ON 조건절을 필수적으로 사용해야 한다.
+
 <br>
 
 ### 가. LEFT OUTER JOIN
 
+조인 수행시 먼저 표기된 좌측 테이블에 해당하는 데이터를 먼저 읽은 후, 나중 표기된 우측 테이블
+에서 JOIN 대상 데이터를 읽어 온다. 즉, Table A 와 B 가 있을 때(Table 'A'가 기준이 됨), A 와 B
+를 비교해서 B 의 JOIN 칼럼에서 같은 값이 있을 때 그 해당 데이터를 가져오고, B 의 JOIN 칼럼에
+서 같은 값이 없는 경우에는 B 테이블에서 가져오는 칼럼들은 NULL 값으로 채운다. 그리고 LEFT
+JOIN 으로 OUTER 키워드를 생략해서 사용할 수 있다.
+
+```SQL
+SELECT STADIUM_NAME, STADIUM.STADIUM_ID, SEAT_COUNT, HOMETEAM_ID, TEAM_NAME FROM STADIUM
+LEFT OUTER JOIN TEAM ON STADIUM.HOMETEAM_ID = TEAM.TEAM_ID ORDER BY HOMETEAM_ID;
+
+-- OUTER는 생략이 가능한 키워드이다.
+SELECT STADIUM_NAME, STADIUM.STADIUM_ID, SEAT_COUNT, HOMETEAM_ID, TEAM_NAME FROM STADIUM
+LEFT JOIN TEAM ON STADIUM.HOMETEAM_ID = TEAM.TEAM_ID ORDER BY HOMETEAM_ID
+```
+
 <br>
 
 ### 나. RIGHT OUTER JOIN
+
+조인 수행시 LEFT JOIN 과 반대로 우측 테이블이 기준이 되어 결과를 생성한다. 즉, TABLE A 와 B
+가 있을 때(TABLE 'B'가 기준이 됨), A 와 B 를 비교해서 A 의 JOIN 칼럼에서 같은 값이 있을 때 그
+해당 데이터를 가져오고, A 의 JOIN 칼럼에서 같은 값이 없는 경우에는 A 테이블에서 가져오는 칼럼
+들은 NULL 값으로 채운다. 그리고 RIGHT JOIN 으로 OUTER 키워드를 생략해서 사용할 수 있다.
+
+```SQL
+SELECT E.ENAME, D.DEPTNO, D.DNAME FROM EMP E RIGHT OUTER JOIN DEPT D ON E.DEPTNO = D.DEPTNO;
+
+-- OUTER는 생략이 가능한 키워드이다.
+SELECT E.ENAME, D.DEPTNO, D.DNAME, D.LOC FROM EMP E RIGHT JOIN DEPT D ON E.DEPTNO = D.DEPTNO;
+```
 
 <br>
 
@@ -150,7 +196,10 @@ SELECT * FROM DEPT FULL JOIN DEPT_TEMP ON DEPT.DEPTNO = DEPT_TEMP.DEPTNO;
 SELECT X.KEY1, Y.KEY2 FROM TAB1 X INNER JOIN TAB2 Y ON (X.KEY1 = Y.KEY2);
 
 -- CARTESIAN PRODUCT
+-- 양쪽 테이블 TAB1 과 TAB2 의 데이터를 곱한 개수인 4 * 3 = 12 건이 추출됨 키 값 조합이 B-A, B-B, B-C, C-A, C-B, C-C, D-A, DB, D-C, E-A, E-B, E-C 인 12 건이 출력된다.
 SELECT X.KEY1, Y.KEY2 FROM TAB1 X CROSS JOIN TAB2 Y
+
+
 
 -- LEFT OUTER JOIN
 SELECT X.KEY1, Y.KEY2 FROM TAB1 X LEFT OUTER JOIN TAB2 Y ON (X.KEY1 = Y.KEY2);
