MySql/DB 정보 확인 쿼리 추가

--- a/DataBase/MySQL/기본 명령어.md
+++ b/DataBase/MySQL/기본 명령어.md
@@ -48,3 +48,16 @@ ex)
 ALTER TABLE RESERVATION
 MODIFY COLUMN NAME VARCHAR(30) NOT NULL
 ```
+
+### DB 정보 확인 쿼리
+
+```sql
+-- 데이터베이스 테이블 수
+SELECT COUNT(*) FROM information_schema.`TABLES` WHERE table_schema = 'DB명';
+
+-- 전체 테이블의 레코드 개수
+SELECT SUM(TABLE_ROWS) FROM INFORMATION_SCHEMA.TABLES WHERE TABLE_SCHEMA = 'DB명';
+
+-- 데이터베이스별 용량 확인
+SELECT table_schema "Database", ROUND(SUM(data_length+index_length)/1024/1024,1) "MB" FROM information_schema.TABLES GROUP BY 1;
+```
