--- a/Algorithm/Python/project/4.linkedList.ipynb
+++ b/Algorithm/Python/project/4.linkedList.ipynb
@@ -145,33 +145,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Node를 관리하는 클래스를 만들어 관리할 수 있도록 수정\n",
     "class Node:\n",
-    "  def __init__(self, data, next = None)\n",
+    "  def __init__(self, data, next = None):\n",
     "    self.data = data\n",
     "    self.next = next\n",
     "    \n",
     "class NodeMgmt:\n",
     "  def __init__(self, data):\n",
-    "    self.head = Node(data)\n",
+    "    self.head = Node(data)      # Node의 헤드를 설정해준다.\n",
     "  \n",
     "  def add(self, data):\n",
-    "    if self.head == '':\n",
+    "    if self.head == '':         # head에 아무것도 없다면 (생성자에서 생성하지만 혹시 없다면)\n",
     "      self.head = Node(data)\n",
     "    else:\n",
-    "      node = self.head\n",
-    "      while node.next:\n",
+    "      node = self.head          # 초기값으로 head를 node에 넣어준다.\n",
+    "      while node.next:          # node를 순회하며 마지막 노드를 찾는다.\n",
     "        node = node.next\n",
-    "      node.next = Node(data)\n",
+    "      node.next = Node(data)    # 마지막 노드에 파리미터로 받아온 데이터를 가진 노드를 추가한다.\n",
     "  \n",
-    "  def desc(self):\n",
+    "  def asc(self):                # 모든 노드를 순회하며 print 한다. \n",
     "    node = self.head\n",
     "    while node:\n",
     "      print(node.data)\n",
-    "      node = node.next"
+    "      node = node.next\n",
+    "  \n",
+    "  def delete(self, data):\n",
+    "    if self.head == '';\n",
+    "      print(\"해당 값을 가진 노드가 없습니다.\")\n",
+    "      return\n",
+    "    \n",
+    "    if self.head.data == data:\n",
+    "      temp = self.head\n",
+    "      self.head = self.head.next\n",
+    "      del temp\n",
+    "    else:\n",
+    "      node = self.head\n",
+    "      while node.next:\n",
+    "        if node.next.data == data:\n",
+    "          temp = node.next\n",
+    "          node.next = node.next.next\n",
+    "          del temp\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "linkedList = NodeMgmt(0)\n",
+    "linkedList.asc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for data in range(1, 10):\n",
+    "  linkedList.add(data)\n",
+    "\n",
+    "linkedList.asc()"
    ]
   },
   {
@@ -198,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.2"
   },
   "orig_nbformat": 4
  },
