--- a/Algorithm/Python/project/4.linkedList.ipynb
+++ b/Algorithm/Python/project/4.linkedList.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,21 +175,27 @@
     "      node = node.next\n",
     "  \n",
     "  def delete(self, data):\n",
-    "    if self.head == '';\n",
+    "    if self.head == '':\n",
     "      print(\"해당 값을 가진 노드가 없습니다.\")\n",
     "      return\n",
     "    \n",
-    "    if self.head.data == data:\n",
+    "    # 지우려는 데이터가 head에 존재하면 \n",
+    "    # head의 next 노드를 head로 옮기고 head를 지운다.\n",
+    "    if self.head.data == data:        \n",
     "      temp = self.head\n",
     "      self.head = self.head.next\n",
     "      del temp\n",
+    "    \n",
     "    else:\n",
     "      node = self.head\n",
     "      while node.next:\n",
     "        if node.next.data == data:\n",
     "          temp = node.next\n",
     "          node.next = node.next.next\n",
-    "          del temp\n"
+    "          del temp\n",
+    "          return\n",
+    "        else:\n",
+    "          node = node.next"
    ]
   },
   {
@@ -212,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -220,6 +226,15 @@
      "output_type": "stream",
      "text": [
       "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
       "1\n",
       "2\n",
       "3\n",
@@ -241,10 +256,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "linkedList = NodeMgmt(0)\n",
+    "linkedList.asc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for data in range(1, 10):\n",
+    "  linkedList.add(data)\n",
+    "\n",
+    "linkedList.asc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "linkedList.asc()"
+   ]
   }
  ],
  "metadata": {
@@ -263,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
