--- a/Algorithm/Python/project/4.linkedList.ipynb
+++ b/Algorithm/Python/project/4.linkedList.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,15 +187,143 @@
     "      del temp\n",
     "    \n",
     "    else:\n",
-    "      node = self.head\n",
-    "      while node.next:\n",
-    "        if node.next.data == data:\n",
-    "          temp = node.next\n",
-    "          node.next = node.next.next\n",
-    "          del temp\n",
+    "      node = self.head                  # 헤드 노드를 저장\n",
+    "      while node.next:                  # node가 next를 가지는지 확인하는 작업을 무한반복\n",
+    "        if node.next.data == data:      # 다음 node의 data가 지우려는 data와 같다면\n",
+    "          temp = node.next              # 다음 node의 주소값(next)을 temp에 저장 (내 노드에 저장된 다음노드의 주소값을 말함)\n",
+    "          node.next = node.next.next    # 다음 node의 주소값(next)를 내 노드에 저장(다음노드가 가지고 있는 그 다음노드의 주소값(next)을 말함)\n",
+    "          del temp                      # 다음 node 삭제\n",
     "          return\n",
     "        else:\n",
     "          node = node.next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "linkedList = NodeMgmt(0)\n",
+    "linkedList.asc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for data in range(1, 10):\n",
+    "  linkedList.add(data)\n",
+    "\n",
+    "linkedList.asc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linkedList.delete(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "linkedList.asc()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "더블 링크드 리스트 구현 실습"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, data, prev=None, next=None):\n",
+    "        self.prev = prev\n",
+    "        self.next = next\n",
+    "        self.data = data\n",
+    "\n",
+    "class NodeMgmt:\n",
+    "    def __init__(self, data):\n",
+    "        self.head = Node(data)\n",
+    "        self.tail = self.head       \n",
+    "        # self.tail이란 맨 뒤의 노드를 의미한다.\n",
+    "        # 현재 head만 있다면 tail도 head가 되는 것이다.\n",
+    "    \n",
+    "    def insert(self, data):\n",
+    "        if self.head == None:\n",
+    "            self.head = Node(data)\n",
+    "            self.tail = self.head\n",
+    "        else:\n",
+    "            node = self.head\n",
+    "            while node.next:    # node.next가 None이 되면 while 중지됨\n",
+    "                node = node.next    \n",
+    "            new = Node(data)    # node 생성\n",
+    "            node.next = new     # 마지막 node의 next에 new를 저장\n",
+    "            new.prev = node     # new의 prev에 최초 마지막이였던 node를 저장\n",
+    "            self.tail = new     # new 노드가 마지막 노드라는 것을 self.taill에 저장한다.\n",
+    "    \n",
+    "    def description(self):\n",
+    "        node = self.head\n",
+    "        while node:\n",
+    "            print(node.data)\n",
+    "            node = node.next"
    ]
   },
   {
@@ -207,34 +335,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "linkedList = NodeMgmt(0)\n",
-    "linkedList.asc()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
       "1\n",
       "2\n",
       "3\n",
@@ -248,33 +349,122 @@
     }
    ],
    "source": [
+    "double_linked_list = NodeMgmt(0)\n",
     "for data in range(1, 10):\n",
-    "  linkedList.add(data)\n",
-    "\n",
-    "linkedList.asc()"
+    "    double_linked_list.insert(data)\n",
+    "double_linked_list.description()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
    "source": [
-    "linkedList = NodeMgmt(0)\n",
-    "linkedList.asc()"
+    "연습3: 위 코드에서 노드 데이터가 특정 숫자인 노드 앞에 데이터를 추가하는 함수를 만들고, 테스트해보기\n",
+    "- 더블 링크드 리스트의 tail 에서부터 뒤로 이동하며, 특정 숫자인 노드를 찾는 방식으로 함수를 구현하기\n",
+    "- 테스트: 임의로 0 ~ 9까지 데이터를 링크드 리스트에 넣어보고, 데이터 값이 2인 노드 앞에 1.5 데이터 값을 가진 노드를 추가해보기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, data, next=None, prev=None):\n",
+    "        self.data = data\n",
+    "        self.next = next\n",
+    "        self.prev = prev\n",
+    "\n",
+    "class NodeMgmt:\n",
+    "    def __init__(self, data):\n",
+    "        self.head = Node(data)\n",
+    "        self.tail = self.head\n",
+    "\n",
+    "    def insert(self, data):\n",
+    "        if self.head == None:\n",
+    "            self.head = Node(data)\n",
+    "            self.tail = self.head\n",
+    "        else:\n",
+    "            node = self.head\n",
+    "            while node.next:\n",
+    "                node = node.next\n",
+    "            new = Node(data)\n",
+    "            node.next = new\n",
+    "            new.prev = node\n",
+    "            self.tail = new\n",
+    "\n",
+    "    def search_from_head(self, data):\n",
+    "        if self.head == None:\n",
+    "            return False\n",
+    "        \n",
+    "        node = self.head\n",
+    "        while node:\n",
+    "            if node.data != data:\n",
+    "                node = node.next\n",
+    "            else:\n",
+    "                print(node.data)\n",
+    "                return True\n",
+    "        return False\n",
+    "    \n",
+    "    def search_from_tail(self, data):\n",
+    "        if self.head == None:\n",
+    "            return False\n",
+    "        \n",
+    "        node = self.tail\n",
+    "        while node:\n",
+    "            if node.data != data:\n",
+    "                node = node.prev\n",
+    "            else:\n",
+    "                print(node.data)\n",
+    "                return True\n",
+    "        return False\n",
+    "\n",
+    "    def insertAfter(self, data):\n",
+    "        if self.head == None:\n",
+    "            self.head = Node(data)\n",
+    "            self.tail = self.head\n",
+    "        else:\n",
+    "            node = self.tail\n",
+    "            while node.prev:\n",
+    "                if node.data > data:\n",
+    "                    node = node.prev\n",
+    "                else:\n",
+    "                    break\n",
+    "\n",
+    "            new = Node(data)\n",
+    "            new.next = node.next\n",
+    "            new.prev = node\n",
+    "            node.next = new\n",
+    "\n",
+    "    def insert_before(self, data, before_data):\n",
+    "        if self.head == None:\n",
+    "            self.head = Node(data)\n",
+    "            return True\n",
+    "        else:\n",
+    "            node = self.tail\n",
+    "            while node.data != before_data:\n",
+    "                node = node.prev\n",
+    "                if node == None:\n",
+    "                    return False\n",
+    "            \n",
+    "            new = Node(data)\n",
+    "            new.next = node\n",
+    "            new.prev = node.prev\n",
+    "            node.prev.next = new\n",
+    "            node.prev = new\n",
+    "\n",
+    "    def description(self):\n",
+    "        node = self.head\n",
+    "        while node:\n",
+    "            print(node.data)\n",
+    "            node = node.next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -290,38 +480,92 @@
       "6\n",
       "7\n",
       "8\n",
-      "9\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
       "9\n"
      ]
     }
    ],
    "source": [
+    "double_linked_list = NodeMgmt(0)\n",
     "for data in range(1, 10):\n",
-    "  linkedList.add(data)\n",
-    "\n",
-    "linkedList.asc()"
+    "    double_linked_list.insert(data)\n",
+    "double_linked_list.description()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "double_linked_list.insertAfter(1.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "double_linked_list.insert_before(1.5, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "double_linked_list.search_from_head(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "double_linked_list.search_from_tail(9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -337,30 +581,12 @@
       "6\n",
       "7\n",
       "8\n",
-      "9\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
       "9\n"
      ]
     }
    ],
    "source": [
-    "linkedList.asc()"
+    "double_linked_list.description()"
    ]
   }
  ],
