Python/시간복잡도

--- a/Algorithm/Python/project/4.linkedList.ipynb
+++ b/Algorithm/Python/project/4.linkedList.ipynb
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,10 +450,11 @@
     "                    return False\n",
     "            \n",
     "            new = Node(data)\n",
-    "            new.next = node\n",
+    "            new.next = node         # 새로운 Node의 next는 찾은 \n",
     "            new.prev = node.prev\n",
     "            node.prev.next = new\n",
     "            node.prev = new\n",
+    "            return True\n",
     "\n",
     "    def description(self):\n",
     "        node = self.head\n",
@@ -464,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -489,24 +490,6 @@
     "for data in range(1, 10):\n",
     "    double_linked_list.insert(data)\n",
     "double_linked_list.description()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "double_linked_list.insertAfter(1.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "double_linked_list.insert_before(1.5, 2)"
    ]
   },
   {
@@ -565,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -574,6 +557,37 @@
      "text": [
       "0\n",
       "1\n",
+      "1.5\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "double_linked_list.insert_before(1.5, 2)\n",
+    "double_linked_list.description()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1.5\n",
+      "1.5\n",
+      "1.5\n",
       "2\n",
       "3\n",
       "4\n",
