Python/hashtable(충돌알고리즘(1))

--- a/Algorithm/Python/project/6.해쉬테이블.ipynb
+++ b/Algorithm/Python/project/6.해쉬테이블.ipynb
@@ -45,6 +45,68 @@
     "def hash_func(key): \n",
     "  return key % 5"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "해쉬테이블 생성 연습"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 해쉬테이블 생성\n",
+    "hash_table = list([0 for i in range(0)])\n",
+    "\n",
+    "# hash value 생성\n",
+    "def get_key(data):\n",
+    "    return hash(data)\n",
+    "\n",
+    "# hash address를 생성핧 hash function을 만듬\n",
+    "def hash_function(key):\n",
+    "    return key % 8\n",
+    "\n",
+    "# 생성된 hash value를 hash function을 이용하여 hash adddress를 생성\n",
+    "def save_data(data, value):\n",
+    "    hash_address = hash_function(get_key(data))\n",
+    "    hash_table[hash_address] = value\n",
+    "\n",
+    "# 해쉬 테이블의 데이터를 읽음(key를 파라미터로 받음)\n",
+    "def read_data(data):\n",
+    "    hash_address = hash_function(get_key(data))\n",
+    "    return hash_table[hash_address]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-5555376175026790677\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(get_key(\"dave\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "충돌 해결 알고리즘"
+   ]
   }
  ],
  "metadata": {
@@ -63,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
