--- a/Algorithm/Python/lecture/Chapter09-해쉬 테이블-live.ipynb
+++ b/Algorithm/Python/lecture/Chapter09-해쉬 테이블-live.ipynb
@@ -238,7 +238,7 @@
     "<div class=\"alert alert-block alert-warning\">\n",
     "<strong><font color=\"blue\" size=\"3em\">연습1: 리스트 변수를 활용해서 해쉬 테이블 구현해보기</font></strong><br>\n",
     "1. 해쉬 함수: key % 8<br>\n",
-    "2. 해쉬 키 생성: hash(data)\n",
+    "2. 해쉬 키 생성: hash(data) (파이썬 내장함수)\n",
     "</div>"
    ]
   },
@@ -313,8 +313,9 @@
    "metadata": {},
    "source": [
     "### 6. 충돌(Collision) 해결 알고리즘 (좋은 해쉬 함수 사용하기)\n",
-    "> 해쉬 테이블의 가장 큰 문제는 충돌(Collision)의 경우입니다.\n",
-    "> 이 문제를 충돌(Collision) 또는 해쉬 충돌(Hash Collision)이라고 부릅니다."
+    "> 해쉬 테이블의 가장 큰 문제는 충돌(Collision)의 경우입니다. <br>\n",
+    "> 이 문제를 충돌(Collision) 또는 해쉬 충돌(Hash Collision)이라고 부릅니다. <br>\n",
+    "> (한개 이상의 데이터가 동일한 해쉬주소에 저장이 되어야 될경우 충돌 문제가 생긴다.)"
    ]
   },
   {
@@ -324,7 +325,8 @@
    "source": [
     "#### 6.1. Chaining 기법\n",
     "- **개방 해슁 또는 Open Hashing 기법** 중 하나: 해쉬 테이블 저장공간 외의 공간을 활용하는 기법\n",
-    "- 충돌이 일어나면, 링크드 리스트라는 자료 구조를 사용해서, 링크드 리스트로 데이터를 추가로 뒤에 연결시켜서 저장하는 기법"
+    "- 충돌이 일어나면, 링크드 리스트라는 자료 구조를 사용해서, 링크드 리스트로 데이터를 추가로 뒤에 연결시켜서 저장하는 기법\n",
+    "- 충돌된 데이터를 외부에 따로 저장공간을 확보하여 저장하는 방법이다."
    ]
   },
   {
@@ -456,7 +458,8 @@
     "#### 6.2. Linear Probing 기법\n",
     "- **폐쇄 해슁 또는 Close Hashing 기법** 중 하나: 해쉬 테이블 저장공간 안에서 충돌 문제를 해결하는 기법\n",
     "- 충돌이 일어나면, 해당 hash address의 다음 address부터 맨 처음 나오는 빈공간에 저장하는 기법\n",
-    "  - 저장공간 활용도를 높이기 위한 기법"
+    "  - 저장공간 활용도를 높이기 위한 기법\n",
+    "  - 해쉬 테이블 안의 빈 공간을 활용하여 저장"
    ]
   },
   {
